--- a/_posts/2022-03-03-中华简史_五代.md
+++ b/_posts/2022-03-03-中华简史_五代.md
@@ -6,54 +6,96 @@ description: 朱温篡唐，中国再次进入乱世。
 ---
 
 ## 概述
+
 ```
+朱温篡唐，中国再次进入乱世。依次进入五个短暂的王朝，后梁，后唐，后晋，后汉，后周。这期间还存在十个小国因此又叫五代十国时期。
 ```
 
 ## 后梁
+
 ```
 公元907年朱温代唐称帝建立大梁，都开封。史称后梁。公元923年为后唐所灭，共历三帝，凡十七年 。
 ```
 
 ## 太祖朱温
+
 ### 开平元年 907	5年	丁卯(四月)	907--911
-> 唐哀帝李柷禅位，汴州宣武节度使朱温建立后梁，封潭州武安节度使马殷为楚王、杭州镇海节度使钱镠为吴越王。幽州卢龙节度使刘仁恭被囚，其子刘守光掌权。成都西川节度使王建建立前蜀。凤翔凤翔节度使李茂贞建立岐国。楚败淮南浏阳之战。
+
+> 唐哀帝李柷禅位，汴州宣武节度使朱温建立后梁，封潭州武安节度使马殷为楚王、杭州镇海节度使钱镠为吴越王。幽州卢龙节度使刘仁恭被囚，其子刘守光掌权。成都西川节度使王建建立
+前蜀。凤翔凤翔节度使李茂贞建立岐国。楚败淮南浏阳之战。
+
 ### 开平二年
+
 > 晋王、太原河东节度使李克用去世，其子李存勖掌权。扬州淮南节度使杨渥被杀，徐温立其弟杨隆演掌权。晋败后梁潞州之战。后梁败岐漠谷之战。
+
 ### 开平三年
+
 > 福州威武节度使王审知建立闽国。后梁败岐延州之战。后梁同州匡国节度使刘知俊叛乱。岐败后梁升平之战。后梁襄州李洪叛乱。吴越败淮南苏州之战。
+
 ### 开平四年
+
 > 后梁镇州成德节度使王镕叛乱。后梁定州义武节度使王处直叛乱。
+
 ### 开平五年
+
 > 晋败后梁柏乡之战。广州清海节度使刘隐去世，其弟刘岩掌权。幽州卢龙节度使刘守光建立桀燕。岐伐前蜀之战。
+
 ### 乾化元年 911	2年	辛未(五月)	911--912
+
 > 晋败后梁蓚县之战。后梁太祖朱温被杀，其子朱友珪即位。后梁河中护国节度使朱友谦叛乱。
+
 ## 废帝郢王朱友珪
+
 ### 凤历元年 913	2月	癸酉	913
+
 > 后梁郢王朱友珪被杀，其弟朱友贞即位。晋灭桀燕幽州之战。
 
 ## 末帝朱友贞
+
 ### 乾化元年 913	3年	癸酉(二月)	913--915
+
 ### 乾化二年
+
 > 前蜀败后梁夔州之战。后梁徐州武宁节度使蒋殷叛乱。
+
 ### 乾化三年
+
 > 后梁魏州魏博节度使贺德伦叛乱。前蜀伐岐之战。
+
 ### 贞明元年 915	7年	乙亥(十一)	915--921
+
 ### 贞明二年
+
 > 晋败后梁莘县之战。晋败后梁太原之战。前蜀伐岐之战。耶律阿保机建立辽国。
+
 ### 贞明三年
+
 > 晋败辽幽州之战。广州清海节度使刘岩建立南汉。
+
 ### 贞明四年
+
 > 晋败后梁胡柳陂之战。前蜀高祖王建去世，其子王衍即位。后梁泰宁节度使张万进叛乱。
+
 ### 贞明五年
+
 > 扬州淮南节度使杨隆演即吴王位。
+
 ### 贞明六年
+
 > 晋败后梁同州之战。吴宣王杨隆演去世，其弟杨溥即位。
+
 ### 贞明七年
+
 > 晋镇州张文礼叛乱。
+
 ### 龙德元年 921	3年	辛巳(五月)	921--923
+
 ### 龙德二年
+
 > 晋败辽望都之战。
+
 ### 龙德三年
+
 > 太原河东节度使李存勖建立后唐。后唐灭后梁开封之战。后唐潞州李继珂之乱。
 
 
@@ -61,69 +103,121 @@ description: 朱温篡唐，中国再次进入乱世。
 乾化二年六月，朱友珪弑父篡位，以次年为凤历元年。凤历元年二月朱友贞与杨师厚等发动政变，朱友珪自杀。朱友贞称帝后沿用太祖乾化年号，以是年为乾化三年。乾化五年十一月改元贞明。
 ```
 ## 后唐
+
 ```
 后唐的前身是唐末五代十国初期的晋国(或称北晋、前晋)。891年，河东节度使李克用被唐昭宗册立为晋王，后逐渐演变为割据性质的政权。907年，朱温篡唐建立梁朝，李克用至此完全独立，年号依旧使用唐昭宗的天佑，成为北方最大的割据政权，与朱温对峙。908年，李克用去世，子李存勖即位。923年，李存勖在魏州(今河北大名县)称帝，改国号大唐，史称后唐，同年底，灭梁，定都洛阳。936年，石敬瑭称帝，建立后晋，并以燕云十六州为代价，借助契丹兵攻入洛阳，后唐灭亡。后唐凡四帝十四年 。
 ```
 
 ## 庄宗李存勖	
+
 ### 同光元年 923	4年	癸未(四月)	923--926
+
 ### 同光二年
+
 > 江陵荆南节度使高季兴建立南平。
+
 ### 同光三年
+
 > 闽忠懿王王审知去世，其子王延翰即位。后唐灭前蜀成都之战。
+
 ### 同光四年
+
 > 后唐魏州赵在礼叛乱。后唐庄宗李存勖被杀，明宗李嗣源即位。闽王王延翰被杀，其弟王延钧即位。辽太祖耶律阿保机去世，其子耶律德光即位。
+
 ## 明宗李嗣源
+
 ### 天成元年 926	5年	丙戌(四月)	926--930
+
 ### 天成二年
+
 > 后唐汴州宣武节度使朱守殷叛乱。吴王杨溥即皇帝位。
+
 ### 天成三年
+
 > 后唐定州义武节度使王都叛乱。南平武信王高季兴去世，其子高从诲即位。
+
 ### 天成五年
+
 > 楚武穆王马殷去世，其子马希声即位。后唐成都西川节度使孟知祥叛乱。后唐梓州东川节度使董璋叛乱。
+
 ### 长兴元年 930	4年	庚寅(二月)	930--933
+
 ### 长兴三年
+
 > 吴越武肃王钱镠去世，其子钱传瓘即位。潭州武安节度使马希声去世，其弟马希范即位。西川平东川梓州之战。
+
 ### 长兴四年
+
 > 后唐明宗李嗣源去世，其子李从厚即位。闽王王延钧即皇帝位。
+
 ## 闵帝李从厚	
+
 ### 应顺元年 934	1年	甲午	934
+
 > 后唐愍帝李从厚被杀，潞王李从珂即位。成都西川节度使孟知祥建立后蜀。后蜀高祖孟知祥去世，其子孟昶即位。
+
 ## 末帝李从珂	
+
 ### 清泰元年 934	3年 934	甲午(四月)	934--936
+
 ### 清泰二年
+
 > 闽太宗王延钧被杀，其子王继鹏即位。
+
 ### 清泰三年
+
 > 太原河东节度使石敬瑭建立后晋。后晋灭后唐洛阳之战。
 
 ## 后晋
+
 ```
 公元936年石敬瑭建晋灭唐，史称后晋，初都洛阳，后迁开封。947年1月为契丹所灭，凡二帝十一年。
 ```
 
 ## 高祖石敬瑭	
+
 ### 天福元年 936	7年	丙申	936--942
+
 ### 天福二年
+
 > 后晋魏州魏博节度使范延光叛乱。后晋孟州张从宾叛乱。吴睿帝杨溥禅位，李昪建立南唐。
-### 天福四年
+
+### 天福四年朱温篡唐，中国再次进入乱世。
+
 > 闽康宗王继鹏被杀，其叔王延羲即位。
+
 ### 天福五年
+
 > 后晋安州安远节度使李金全叛乱。
+
 ### 天福六年
+
 > 后晋襄州山南东道节度使安从进叛乱。后晋镇州成德节度使安重荣叛乱。吴越文穆王钱元瓘去世，其子钱弘佐即位。
+
 ### 天福七年
+
 > 南汉高祖刘岩去世，其子刘玢即位。后晋高祖石敬瑭去世，其侄石重贵即位。南汉循州张遇贤起义。
 
 ## 出帝石重贵	
+
 ### 天福七年 942	1年	壬寅	942--944
+
 ### 天福八年
+
 > 南唐烈祖李昪去世，其子李璟即位。闽建州节度使王延政建立殷国。南汉殇帝刘玢被杀，其弟刘晟即位。后晋青州平卢节度使杨光远叛乱。
+
 ### 天福九年
+
 > 辽伐后晋之战。闽景宗王延羲被杀，其将朱文进篡位，闽国大乱。
+
 ### 开运元年 944	3年	甲辰	944--946
+
 ### 开运二年
+
 > 后晋伐辽之战。南唐灭殷建州之战。
+
 ### 开运三年
+
 > 辽灭后晋开封之战。
 
 ```
@@ -131,79 +225,135 @@ description: 朱温篡唐，中国再次进入乱世。
 ```
 
 ## 后汉
+
 ```
 契丹灭后晋后，在中原烧杀抢掠无恶不作，激起中原人民的反抗。各地守将也拒绝投降契丹，刘知远趁中原无主，在太原称帝，国号大汉，史称后汉。后攻克中原，迁都开封。为争取人心，依旧使用后晋高祖石敬瑭年号，称天福十二年。次年建元乾佑。乾佑元年正月刘知远去世，二月刘承佑继帝位沿用。乾佑三年十一月郭威反叛围攻汴京，刘承佑在逃跑途中为郭允明所杀。后汉亡，凡二帝四年 。
 ```
 
 ## 高祖刘知远
+
 ### 天福元年947	1年	丁未(二月)	947
+
 > 太原河东节度使刘知远建立后汉。后汉魏州魏博节度使杜重威叛乱。辽太宗耶律德光去世，其侄耶律兀欲即位。吴越败南唐福州之战。吴越忠献王钱弘佐去世，其弟钱弘倧即位。吴越王钱弘倧被废，其弟钱弘俶即位。楚文昭王马希范去世，其弟马希广即位。
+
 ### 乾佑元年 948	1月	戊申	948
+
 > 后汉高祖刘知远去世，其子刘承祐即位。后汉长安永兴节度使赵思绾叛乱。后汉凤翔凤翔节度使王景崇叛乱。后汉河中护国节度使李守贞叛乱。南平文献王高从诲去世，其子高保融即位。
 
 ## 隐帝刘承佑	
+
 ### 乾佑元年 948	3年	戊申(二月)	948--950
+
 ### 乾佑三年 
+
 > 后汉魏州魏博节度使郭威叛乱。楚王马希广被杀，其兄马希萼即位。
 
 ## 后周
+
 ```
 公元951年正月郭威称帝建周，都开封，史称后周。960年为北宋所取代，凡三帝十年。
 ```
 
 ## 太祖郭威
+
 ### 广顺元年 951	3年	辛亥	951--953
+
 > 魏州魏博节度使郭威建立后周。太原河东节度使刘崇建立北汉。辽世宗耶律兀欲被杀，其弟耶律述律即位。后周败北汉霍邑之战。南唐灭楚潭州之战。
+
 ### 广顺二年
+
 > 后周泰宁节度使慕容彦超叛乱。
+
 ### 显德元年 954	1月	甲寅	954
+
 > 后周太祖郭威去世，其甥柴荣即位。后周败北汉高平之战。北汉世祖刘崇去世，其子刘承钧即位。
+
 ## 世宗柴荣	
+
 ### 显德元年 954	 6年	甲寅(正月)	954
+
 ### 显德二年
+
 > 后周伐后蜀之战。
+
 ### 显德三年
+
 > 后周伐南唐之战。
+
 ### 显德四年
+
 > 后周伐南唐之战。
+
 ### 显德五年
+
 > 南汉中宗刘晟去世，其子刘鋹即位。
+
 ### 显德六年
+
 > 后周伐辽之战。后周世宗柴荣去世，其子柴宗训即位。
 
 ## 恭帝柴宗训	
+
 ### 显德七年 960	半年	己未(六月)	959--960
+
 > 后周恭帝柴宗训禅位，赵匡胤建立北宋。北宋潞州昭义节度使李筠叛乱。北宋扬州淮南节度使李重进叛乱。南平贞懿王高保融去世，其弟高保勖即位。
+
 ```
 显德元年正月太祖郭威去世，养子柴荣继帝位，沿用显德年号。显德六年六月，柴宗训继位依旧沿用显德年号。显德七年正月被迫禅位于宋太祖赵匡胤。赵匡胤改显德七年为建隆元年。
 ```
 
 ## 宋
+
 ## 宋 建隆元年 960年
+
 ## 宋 建隆二年
+
 > 南唐元宗李璟去世，其子李煜即位。
+
 ## 宋 建隆三年
+
 > 南平王高保勖去世，其子高继冲即位。
+
 ## 宋 建隆四年
+
 > 北宋灭南平江陵之战。
+
 ### 宋乾德元年 963 
+
 ### 宋乾德三年
+
 > 北宋灭后蜀成都之战。
+
 ### 宋乾德六年
+
 > 北汉睿宗刘承钧去世，其子刘继恩即位。北汉景宗刘继恩被杀，其弟刘继元即位。
+
 ### 宋开宝元年 968
+
 ### 宋开宝二年
+
 > 辽穆宗耶律被杀，其弟耶律贤即位。
+
 ### 宋开宝四年
+
 > 北宋灭南汉广州之战。
+
 ### 宋开宝八年
+
 > 北宋灭南唐金陵之战。
+
 ### 宋开宝九年
+
 > 宋太祖赵匡胤去世，其弟赵光义即位。
+
 ## 宋太平兴国元年 976
+
 ### 宋太平兴国三年
+
 > 吴越王钱弘俶归降北宋。
+
 ### 宋太平兴国四年
+
 > 北宋灭北汉太原之战。
 
 >  部分资料来自网络，如侵犯您的权益，请联系我删除！
