--- a/_posts/2022-03-03-中华简史_三国.md
+++ b/_posts/2022-03-03-中华简史_三国.md
@@ -14,280 +14,512 @@ description: 魏蜀吴三国鼎立，三国征伐导致大量人口损失。
 ```
 
 ## 汉烈祖 昭烈皇帝 刘备 161年－223年 在位221年－223年
+
 ### 章武 221年－223年
+
 ## 汉孝怀皇帝（汉赵刘渊谥）安乐思公（晋朝谥） 刘禅 207年－271年 223年－263年在位 
+
 ### 建兴 223年－237年 
+
 ### 延熙 238年－257年 
+
 ### 景耀 258年－263年 
+
 ### 炎兴 263年
 
+
 ## 魏高祖 曹丕  文皇帝 子桓 首阳陵
+
 ### 黄初（220—226）
+
 ## 曹叡 魏烈祖 明皇帝 高平陵 元仲 226—239 
+
 ### 太和
+
 ### 青龙
+
 ### 景初
+
 ## 曹芳 邵陵厉公（齐王）兰卿 239—254 
+
 ### 正始
+
 ### 嘉平
+
 ## 曹髦 高贵乡公 彦士 254—260 
+
 ### 正元
+
 ### 甘露
+
 ## 曹奂 魏元皇帝 景明 王原陵 260—266 
+
 ### 景元
 
 ## 吴太祖 吴大帝 孙权 182年—252年 229年—252年 蒋陵
+
 ### 黄武 222年十月～229年四月 
+
 ### 黄龙 229年四月～231年
+
 ### 嘉禾 232年～238年八月
+
 ### 赤乌　238年八月～251年四月
+
 ### 太元　251年5月-252年正月
+
 ### 神凤　252年2-4月
+
 ## 孙亮 243年—260年 252年—258年 赖乡 258年被废，无谥号，史称少帝、废帝、会稽王 
+
 ### 建兴 252年五月～253年
+
 ### 五凤 254年～256年十月
+
 ### 太平 256年十月～258年十月
+
 ## 吴太宗 景帝 孙休 235年—264年 258年—264年 定陵
+
 ### 永安 258年十月～264年七月
+
 ## 孙皓 243年—284年 264—280年在位 邙山 280年降晋，无谥号，史称末帝、乌程侯、归命侯
+
 ### 元兴 264年八月～265年三月
+
 ### 甘露 265年四月～266年七月
+
 ### 宝鼎 266年八月～269年九月
+
 ### 建衡 269年十月～271年
+
 ### 凤凰 272年～274年
+
 ### 天册 275年～276年六月
+
 ### 天玺 276年七～十二月
+
 ### 天纪 277年～280年三月
 
 
 ## 东汉   灵帝刘宏
+
 ### 184年     中平元年     （大事：张角领导“黄巾起义”）
+
 > 2月, 张角领导的黄巾大起义爆发10月 , 张角病死
+
 > 11月 , 起义主力失败
+
 > 黄巾大起义
+
 ### 185      中平二年
+
 ### 186      中平三年
+
 ### 187      中平四年
+
 > 孙坚出任长沙太守
+
 ### 188      中平五年
+
 > 灵帝设立西园八校尉
+
 > 刘焉出任益州牧
+
 ### 189      中平六年，四月，灵帝崩。少帝刘辩即位，改元光熹。八月，改元昭宁。九月，刘辩被废为弘农王。刘协即位，改元永汉，十二月，复中平六年。
+
 > 4 月, 汉灵帝驾崩 , 皇子刘辩即位 , 何太后临朝, 何进主政
+
 > 8月, 何进诛杀宦官 , 张让杀何进, 袁绍尽杀宦官、董卓进京
+
 > 9月，董卓废少帝 , 立刘协为献帝12月, 曹操起兵讨董卓
+
 > 公孙度出任辽东太守，后自封为辽东侯
+
 ## 汉献帝 刘协 
+
 ### 190 初平元年
+
 > 正月, 关东各路诸侯讨董卓 , 公推袁绍为盟主、董卓杀刘辩 ,
+
 > 2月, 董卓挟汉献帝迁都长安、公孙度称辽东侯
+
 ### 191      初平二年
+
 > 孙坚破董卓, 斩华雄
+
 > 袁绍自领冀州牧，表曹操为东郡太守
+
 > 荀彧投曹操
+
 > 孙坚攻入洛阳 , 得传国玉玺
+
 > 刘表杀孙坚
+
 ### 192      初平三年
+
 > 4月, 王允设计除董卓
+
 > 6月, 李傕，郭汜围都, 杀允败布
+
 > 曹操代理兖州牧, 收黄巾军30万号青州兵
+
 ### 193      初平四年
+
 > 曹操大败啕谦
+
 > 三国大事年表
+
 > 三让徐州
+
 ### 194      （汉献帝 刘协）兴平元年
+
 > 吕布领兖州牧
+
 > 曹操替父报仇二攻徐州、
+
 > 陶迁死 , 刘备为徐州牧
+
 > 刘焉死 , 刘璋立
+
 ### 195      兴平二年
+
 > 2月, 李傕，郭汜之乱
+
 > 夏 , 曹操大破吕布
+
 > 7月, 献帝自长安东归
+
 > 10月，孙策大败刘瑶、献帝命曹操为兖州牧
+
 ### 196      （汉献帝 刘协）建安元年
+
 > 6月, 曹操表刘备为豫州牧
+
 > 7月 , 杨奉救驾
+
 > 8月 ，曹操自领司隶校尉，录尚书事
+
 > 9月, 曹操迎献帝于许都
+
 > 布攻备, 备投操
+
 ### 197      建安二年
+
 > 正月, 曹操败于张绣、袁术称帝
+
 > 袁绍以大将军身份自领冀青幽并四州牧
+
 > 曹操遭遇宛城惊变
+
 ### 198      建安三年
+
 > 12月, 曹操擒杀吕布
+
 ### 199      建安四年
+
 > 3月, 袁绍灭公孙瓒
+
 > 6月, 袁术死、
+
 > 8月, 曹操进驻黎阳
+
 > 11月, 张绣降曹
+
 > 12月, 曹操以官渡为大本营、
+
 ### 200      建安五年       （大事：官渡之战）
+
 > 正月，曹操大败刘备 ,刘备投奔袁绍, 关羽被迫降曹
+
 > 8月, 袁绍兵至黎阳
+
 > 10月, 曹操在官渡大败袁绍
+
 > 孙策平定江东
+
 > 孙策被刺身亡，孙权接班
+
 > 张鲁占据汉中
+
 > 衣带诏事发
+
 > 关羽千里寻兄
+
 ### 201      建安六年
+
 > 4月, 袁曹仓亭之战、刘备投奔刘表
+
 ### 202      建安七年
+
 > 5月, 袁绍病死, 袁尚立
+
 > 9月, 曹操攻袁谭
+
 > 刘备火烧博望坡
+
 ### 203      建安八年
+
 > 孙权讨伐刘表部将黄祖
+
 ### 204      建安九年
+
 > 曹操平定冀州、
+
 > 公孙度死 , 公孙康立
+
 ### 205      建安十年
+
 > 曹操平定青州
+
 ### 206      建安十一年
+
 > 曹操平定并州
+
 ### 207      建安十二年
+
 > 8月, 曹操北征乌桓、灭袁残部,统一北方、 曹操赎回蔡文姬、诸葛亮岀山
+
 ### 208      建安十三年      （大事：赤壁之战）
+
 > 6月，曹操自仼丞相
+
 > 7月, 曹操征刘表
+
 > 8月, 刘表卒、曹操杀孔融
-曹操杀华佗
-12月, 孙刘联军与曹军展开赤壁之战 , 曹操战败
+
+> 曹操杀华佗
+
+> 12月, 孙刘联军与曹军展开赤壁之战 , 曹操战败
+
 ### 209      建安十四年
+
 > 10月, 刘备与孙权之妹成亲
+
 > 12月, 周瑜攻占江陵
+
 > 孙权任徐州牧
+
 > 刘备任荆州牧
+
 ### 210      建安十五年
+
 > 12月, 周瑜谋灭刘备至巴丘病卒, 临死前举荐鲁肃
+
 > 鲁肃向孙权建议把荆州借给刘备
+
 > 辽东建带方郡
+
 ### 211      建安十六年
+
 > 春，曹操征马超、韩遂
+
 > 12月, 刘备入川
+
 > 士燮归附孙权
+
 ### 212      建安十七年
+
 > 5月, 曹操诛马腾
+
 > 10月, 曹操东征孙权 荀彧卒
+
 ### 213      建安十八年
+
 > 正月 , 曹操从濡须口退兵
+
 > 5月, 曹操魏公加九锡
+
 ### 214      建安十九年
+
 > 夏 , 马超归刘、刘备进成都, 自领益州牧
+
 > 10月, 夏侯渊平陇右
+
 > 11月, 曹操杀伏氏
+
 ### 215      建安二十年
+
 > 3月 , 曹操西征张鲁
+
 > 11月, 张鲁投降
+
 > 孙权向刘备讨还荆州
+
 > 8月, 张辽威震逍遥津
+
 ### 216      建安二十一年
+
 > 曹操称魏王
+
 ### 217      建安二十二年
+
 > 曹丕为魏太子
+
 ### 218      建安二十三年
+
 > 正月, 曹操平定耿继、韦晃之乱
+
 > 曹彰收服鲜卑轲比能
+
 ### 219      建安二十四年
+
 > 正月, 黄忠刀斩夏侯渊
+
 > 3月, 汉中之战
+
 > 7月 , 刘备称汉中王 、关羽水淹七军, 擒于禁斩庞德 刘封、孟达取上庸
+
 > 吕蒙白衣渡江，奇袭荆州
+
 > 12月, 孙权杀关羽
+
 ### 220      建安二十五年，三月，改元延康，（汉献帝 刘协）延康元年。十月，禅位于曹丕，东汉灭亡。十月，曹丕即位，改元黄初，（魏文帝曹丕）黄初元年
+
 > 正月，操操死
+
 > 7月, 孟达反蜀
+
 > 10月 ,曹丕称帝建魏 , 汉朝灭亡 黄忠死法正病逝，
+
 ### 221  辛丑 黄初二年（沿用建安二十六年）。四月，刘备即位，改元章武，（蜀汉昭烈帝刘备）章武元年
+
 > 夏四月，汉中王即皇帝位。
+
 ```
 目　蜀中传言帝已遇害，于是汉中王发丧制服，谥曰孝愍皇帝。群下竞劝王称尊号。司马费诗上疏曰：“殿下以曹操父子篡位，故羁旅万里，合众讨贼。今大敌未克而先自立，恐人心疑也。”王不悦，左迁之。遂即位于武担之南，大赦，改元。以诸葛亮为丞相，许靖为司徒。
 ```
 > 权自公安徙都于鄂，更名鄂曰武昌。
+
 > 五月，汉主立夫人吴氏为皇后；子禅为皇太子。
+
 > 秋七月，汉主耻关羽之没，将击孙权。将军赵云曰：“国贼，曹操，非孙权也。若先灭魏，则权自服。今操虽毙，子丕篡位，当因众心，早图关中，居河、渭上流以讨凶逆，关东义士必裹粮策马以迎王师。不应置魏，先与吴战。兵势一交，不得卒解，非良策也。”群臣谏者甚众，汉主皆不听。乃留诸葛亮辅太子，守成都，而自率诸军东下。车骑将军张飞雄猛亚于关羽；羽善待卒伍而骄于士大夫，飞爱礼君子而不恤军人。帝常戒之，飞不悛。至是，当率万人会江州。临发，为帐下所杀，以其首奔孙权。帝闻飞营都督有表，曰：“噫，飞死矣！”孙权遣使求和。诸葛瑾因致笺曰：“关羽之亲，何如先帝？荆州大小，孰与海内？俱应仇疾，谁当先后？若审此数，易于反掌矣。”帝不听。时吴人或言瑾别遣亲人与汉相闻者，权曰：“孤与子瑜，有死生不易之誓，子瑜之不负孤，犹孤之不负子瑜也。”陆逊亦表明瑾必无此，权报曰：“玄德昔遣孔明至吴，孤尝语子瑜曰：‘卿与孔明同产，何不留之？’子瑜言‘亮已委质于人，义无二心。弟之不留，犹瑾之不往也’。其言足贯神明，今岂当有此乎！孤与子瑜，可谓神交，非外言可间。知卿意至，辄封来表示之矣。”帝遣吴班、冯习攻破权将李异等于巫，进军秭归。权以陆逊为大都督，督朱然等五万人拒守。
+
 > 八月，孙权遣使向魏称臣，送于禁等还魏。朝臣皆贺，刘晔独曰：“权无故求降，必内有急。恐中国往乘其衅，故委地求降，一以却中国之兵，二假中国之援，以强其众而疑敌人耳。夫吴、蜀各保一州，有急相救，此小国之利也；今自相攻，天亡之也，宜大兴师，径渡江袭之。蜀攻其外，我攻其内，吴之亡不出旬月。吴亡，则蜀亦不能久存矣。”魏主不听，遂受吴降。遣太常邢贞奉策拜权为吴王，加九锡。刘晔谏曰：“夫王位去天子一阶耳，今信其伪降，崇其位号，以封殖之，是为虎傅翼也。”魏主不听。贞至吴，权出都亭候贞，贞入门，不下车。张昭曰：“君敢自尊大，岂以江南寡弱，无方寸之刃乎！”贞即下车。中郎将徐盛愤怒，谓同列曰：“盛等不能奋身出命，为国家并许、洛，吞巴、蜀，而令吾君与贞盟，不亦辱乎！”因涕泣横流。贞闻之，谓其徒曰：“江东将、相如此，非久下人者也。”魏主令于禁诣邺谒高陵。豫于陵屋画关羽战克、庞德愤怒、禁降服之状；禁见，惭恚，病死。
+
 > 冬十月，吴遣中大夫赵咨入谢于魏。魏主丕问曰：“吴王何等主也？”咨对曰：“聪明、仁智、雄略之主也。”魏主问其状，对曰：“纳鲁肃于凡品，聪也；拔吕蒙于行阵，明也；获于禁而不害，仁也；取荆州而兵不血刃，智也；据有三州虎视西方，雄也；屈身于陛下，略也。”丕曰：“颇知学乎？”对曰：“吴王任贤使能，志存经略，虽有余闲，博览经史；然不效书生寻章摘句而已。”曰：“吴可征不？”对曰：“大国有征伐之兵，小国有备御之固。”曰：“吴难魏乎？”对曰：“带甲百万，江、汉为池，何难之有！”曰：“吴如大夫者几人？”对曰：“聪明特达者，八九十人；如臣之比，车载斗量，不可胜数。”孙权立子登为太子。吴王权为登妙选师友，以诸葛瑾子恪、张昭子休、顾雍子谭、陈武子表为中庶子，入讲诗、书，出从骑射，待以布衣之礼，谓之“四友”。
+
 ### 222   壬寅   （魏）黄初三年。（蜀）章武二年。孙权称吴王，建元黄武，（东吴大帝孙权）黄武元年。
+
 > 二月，汉主进军猇亭。
+
 > 夏六月，吴陆逊进攻猇亭，诸军败绩，帝还永安。
+
 ```
 目　帝自巫峡建平连营至夷陵界，立数十屯，自正月与吴相拒，至六月不决。遣吴班将数千人于平地立营，吴将帅欲击之，陆逊曰：“此必有谲，且观之。”帝知计不得行，乃引伏兵八千从谷中出，逊曰：“所以不听诸君击之者，以此故也。”逊将进攻汉军，诸将曰：“攻当在初，今诸要害皆已固守，击之必无利。”逊曰：“彼更事多，其军始集，思虑精专，未可干也。今住既久，不得我便，兵疲意沮，计不复生。掎角此寇正在今日。”乃先攻一营，不利，逊曰：“吾已晓破之之术。”乃敕各持一把茅，以火攻，拔之；遂率诸军同时俱攻，破四十余营。帝升马鞍山，陈兵自绕，逊促兵四面蹙之，土崩瓦解，死者万数。帝夜遁，仅得入白帝城，舟械军资略尽。帝大惭恚曰：“吾乃为陆逊所折辱，岂非天邪！”
 初，诸葛亮与法正好尚不同，而以公义相取，亮每奇正智术。及是，正已卒，亮叹曰：“孝直若在，必能制主上东行；就行，必不危矣。”
 初，魏主丕闻汉兵树栅连营七百余里，谓群臣曰：“彼不晓兵，岂有七百里营可拒敌乎！‘苞原隰险阻而为军者，为敌所禽’，此兵忌也。孙权上事今至矣。”七日，吴破汉书到。
 ```
+
 > 秋八月，汉将军黄权叛降魏。
+
 ```
 汉主既败退，黄权在江北，道绝，不得还，率其众降魏。有司请收权妻子，帝曰：“孤负权，权不负孤也。”待之如初。魏主丕谓权曰：“君欲追踪陈、韩邪？”对曰：“臣受刘主厚遇，降吴不可，还蜀无路，是以归命。且败军之将，免死为幸，何古人之可慕也！”丕善之，拜为镇南将军。
 ```
 > 九月，魏遣将军曹休等击孙权。
+
 > 冬十月，吴王权改元，拒魏；
+
 > 十一月，魏主丕自将击之。
+
 > 吴人聘于汉，遣大中大夫宗玮报之。
 
 ### 223 癸卯  （魏）黄初四年。（蜀）章武三年，四月，刘备崩，五月，刘禅即位，改元建兴，（蜀汉后主刘禅）建兴元年。（吴）黄武二年。
+
 > 春，魏师攻濡须，别将围江陵，皆不克，引还。
+
 > 夏四月，汉主崩于永安，丞相亮受遗诏辅政。五月，太子禅即位，尊皇后曰皇太后。封亮为武乡侯，领益州牧。
+
 ```
 目　诸葛亮至永安。帝病笃，命亮辅太子禅，以尚书令李严为副。帝谓亮曰：“君才十倍曹丕，必能安国，终定大事。嗣子可辅，辅之；如其不可，君可自取。”亮涕泣曰：“臣敢不竭股肱之力，效忠贞之节，继之以死！”帝又诏敕禅曰：“勿以恶小而为之，勿以善小而不为！惟贤惟德，可以服人。汝父德薄，不足效也。汝与丞相从事，事之如父。”帝崩。亮奉丧还成都，以严为中都护，留镇永安。禅即位，时年十七。大赦，改元。封亮为武乡侯，领益州牧，政事咸取决焉。亮乃约官职，修法制，发教与群下曰：“夫参署者，集众思，广忠益也。若远小嫌，难相违覆，旷阙损矣。违覆而得中，犹弃敝而获珠玉。然人心苦不能尽，惟徐元直处兹不惑。又董幼宰参署七年，事有不至，至于十反，来相启告。苟能慕元直之十一，幼宰之勤渠，有忠于国，则亮可少过矣。”又曰：“昔初交州平，屡闻得失；后交元直，勤见启诲；幼宰每言则尽；伟度数有谏正。虽资性鄙暗，不能悉纳，然与此四子终始好合，亦足以明其不疑于直言也。”
 亮尝自校簿书，主簿杨颙谏曰：“为治有体，上下不可相侵。是故古人称‘坐而论道，谓之三公；作而行之，谓之士大夫’。丙吉不问死人，陈平不知钱谷，彼诚达于位分之体也。今公躬校簿书，流汗终日，不亦劳乎！”亮谢之。
 ```
+
 > 六月，益州郡耆帅雍闿等以四郡叛。初，益州郡耆帅雍闿杀太守，求附于吴。又使郡人孟获诱扇诸夷，牂柯、越巂皆叛应闿。丞相亮以新遭大丧，抚而不讨，务农殖谷，闭门息民，民安食足而后用之。
+
 > 秋八月，汉遣尚书邓芝使吴。
+
 ```
 汉后主遣芝修好于吴。时吴王犹未与魏绝，不时见芝。芝请见曰：“臣今来，亦欲为吴，非但为蜀也。”吴王权见之，曰：“孤诚愿与蜀和亲，然恐蜀主幼国小，为魏所乘，不自全耳。”芝曰：“大王命世之英，诸葛亮一时之杰。蜀有重险，吴有三江，共为唇齿，进可兼并天下，退可鼎足而立。今若委质于魏，魏必望大王入朝，求太子内侍，若不从命，则奉辞伐叛，蜀亦顺流见可而进，如此，则江南之地非复大王有也。”权默然良久曰：“君言是也。”遂绝魏，专与汉连和。
 ```
+
 > 汉立皇后张氏。
+
 ### 224 甲辰（魏）黄初五年  （蜀）建兴二年    （吴）黄武三年
+
 > 吴人聘于汉，汉遣邓芝报之。
+
 ```
 芝至吴，权谓曰：“若天下太平，二主分治，不亦乐乎？”芝对曰：“天无二日，土无二王。如并魏之后，大王未识天命，君各茂其德，臣各茂其忠，则战争方始耳。”权大笑曰：“君之诚款，乃当尔邪！”
 ```
+
 > 秋八月，魏主丕大兴军伐吴，留尚书仆射司马懿镇许昌。亲御龙舟，至广陵。吴将军徐盛，列舟舰于江，而植木衣苇，为疑城假楼。时江水盛长，丕临望，叹曰：“魏虽有武骑千群，无所用之，未可图也。”会暴风至，龙舟几覆，于是旋师。
+
 ### 225 乙巳 （魏）黄初六年  （蜀）建兴三年    （吴）黄武四年
+
 > 春三月，丞相亮南征。
 ```
 亮率众讨雍闿等，问计于参军马谡。谡曰：“南中恃其险远，不服久矣；今日破之，明日复反。夫用兵之道，攻心为上，攻城为下，心战为上，兵战为下，愿公服其心而已。”亮纳之。
 ```
+
 > 夏五月，魏主丕以舟师伐吴。
+
 > 六月，吴以顾雍为丞相。
+
 ```
 雍为人寡言，举动时当，权尝叹曰：“顾公不言，言必有中。”至宴乐之际，左右恐有酒失，而雍必见之，是以不敢肆情。权亦曰：“顾公在坐，使人不乐。”其见惮如此。初领尚书令，封侯还而家人不知。及为相，所用文武吏，各随其能，心无适莫。时访逮民间及政职所宜，辄密以闻，用则归之于上；不用终不宣泄；权以此重之。
 ```
+
 > 秋七月，丞相亮讨雍闿，斩之，遂平四郡。
+
 ```
 亮至南中，所在战捷。由越巂入，斩雍闿等。孟获素为夷、汉所服，收馀众拒亮。亮募生致之，既得，使观于营陈间。获曰：“向者不知虚实，故败。今只如此，即易胜耳。”乃纵使更战。七纵七禽而亮犹遣获，获止不去，曰：“公，天威也，南人不复反矣！”遂入滇池，益州、永昌、牂柯、越巂四郡皆平。
 ```
+
 > 冬十月，魏师临江而还。
+
 ```
 八月，魏主丕以舟师自谯循涡入淮。十月，于广陵故城，临江观兵，戎卒十余万，旌旗数百里，有渡江之志。吴人严兵固守。时大寒，冰，舟不得入江。丕见波涛汹涌，叹曰：“嗟乎，固天所以阻南北也！”遂归。
 ```
+
 ### 226  丙午    （魏）黄初七年，五月，曹丕崩，曹叡即位（魏明帝曹叡）。 （蜀）建兴四年。 （吴）黄武五年。
+
 > 夏五月，魏主丕丕卒,曹睿即位。
+
 ```
 初，郭后无子，魏主丕使母养平原王叡；叡母被诛，故未建为嗣。叡事后甚谨，后亦爱之。丕与叡猎，见子母鹿，既射其母，命叡射其子；叡泣曰：“陛下已杀其母，臣不忍复杀其子。”丕释弓矢，为之恻然。及是，疾笃，立为太子。召中军大将军曹真、镇军陈群、抚军司马懿，并受遗诏辅政而卒。太子叡即位。
 初，太子在东宫，不交朝臣，不问政事，惟潜思书籍；即位后，群下想闻风采。居数日，独见侍中刘晔，语尽日。晔出，或问：“何如？”曰：“秦皇、汉武之俦，才具微不及耳。”莅政之始，陈群首上疏曰：“臣下雷同，是非相蔽，固国之大患；然若不和睦，则有雠党，而毁誉失实。二者，不可不深察也。”
 ```
+
 ### 227  丁未   （魏明帝曹叡）太和元年    （蜀）建兴五年     （吴）黄武六年
+
 > 孟达叛魏
+
 > 诸葛亮第一次北伐 , 临行前上《出师表》
+
 > 春三月，丞相亮率诸军出屯汉中，以图中原。
+
 ```
 亮率诸军北驻汉中，使长史张裔、参军蒋琬统留府事。临发，上疏曰：“先帝创业未半而中道崩殂，今天下三分，益州疲敝，此诚危急存亡之秋也。然侍卫之臣不懈于内，忠志之士忘身于外者，盖追先帝之殊遇，欲报之于陛下也。诚宜开张圣听，以光先帝遗德，恢弘志士之气，不宜妄自菲薄，引喻失义，以塞忠谏之路也。宫中、府中，俱为一体，陟罚臧否，不宜异同。若有作奸犯科及为忠善者，宜付有司论其刑赏，以昭陛下平明之理，不宜偏私，使内、外异法也。侍中、侍郎郭攸之、费祎、董允等，此皆良实，志虑忠纯，是以先帝简拔以遗陛下。愚以为宫中之事，事无大小，悉以咨之，然后施行，必能裨补阙漏，有所广益。将军向宠，性行淑均，晓畅军事，试用于昔日，先帝称之曰能，是以众议举宠为督。愚以为营中之事，悉以咨之，必能使行陈和睦，优劣得所。亲贤臣，远小人，此先汉所以兴隆也；亲小人，远贤臣，此后汉所以倾颓也。先帝在时，每与臣论此事，未尝不叹息痛恨于桓、灵也。侍中、尚书、长史、参军，此悉端良、死节之臣，愿陛下亲之，信之，则汉室之隆，可计日而待也。臣本布衣，躬耕南阳，苟全性命于乱世，不求闻达于诸侯。先帝不以臣卑鄙，猥自枉屈，三顾臣于草庐之中，谘臣以当世之事；由是感激，遂许先帝以驱驰。后值倾覆，受任于败军之际，奉命于危难之间，尔来二十有一年矣。先帝知臣谨慎，故临崩寄臣以大事也。受命以来，夙夜忧惧，恐托付不效，以伤先帝之明。故五月渡泸，深入不毛。今南方已定，兵甲已足，当奖率三军，北定中原，庶竭驽钝，攘除奸凶，兴复汉室，还于旧都，此臣所以报先帝，而忠陛下之职分也。至于斟酌损益，进尽忠言，则攸之、祎、允之任也。愿陛下托臣以讨贼兴复之效；不效，则治臣之罪，以告先帝之灵；若无兴德之言，则责攸之、祎、允等之慢以彰其咎。陛下亦宜自谋，以谘诹善道，察纳雅言，深追先帝遗诏，臣不胜受恩感激。今当远离，临表涕零，不知所言。”
 ```
 
 ### 228  戊申    （魏）太和二年     （蜀）建兴六年     （吴）黄武七年
+
 > 司马憝除孟达
+
 > 姜维降蜀
+
 > 吴魏石亭之战曹休大败
+
 > 蜀军兵败街亭 ,诸葛亮挥泪斩马谡 、
+
 > 12月, 诸葛亮二次北伐
+
 > 春正月，丞相亮伐魏，战于街亭，败绩；诏贬亮右将军，行丞相事。
+
 ```
 目　初，魏以夏侯渊子楙都督关中。至是，丞相亮将伐魏，与群下谋之。司马魏延曰：“楙，怯而无谋。今假延精兵五千，直从褒中出，循秦岭而东，当子午而北，不过十日，可到长安。楙闻延奄至，必弃城走。比东方合聚，尚二十许日，而公从斜谷来，亦足以达。如此，则一举而咸阳以西可定矣。”亮以此为危计，不如安从坦道，可以平取陇右，十全必克而无虞，故不用延计。乃率大军攻祁山，戎陈整齐，号令明肃。始魏以昭烈既崩，数岁寂然无闻，是以略无备豫；而卒闻亮出，朝野恐惧，魏主叡如长安，右将军张郃率步骑五万拒之。亮使参军马谡督诸军与郃战于街亭。谡违亮节度，举措烦扰，舍水上山，不下据城。郃绝其汲道，击，大破之。亮乃拔西县千余家还汉中。初，亮以谡才术过人，深加器异；昭烈临终谓曰：“谡言过其实，不可大用，君其察之！”亮未以为然，引谡参军事，每与谈论，自昼达夜。至是，乃收杀之而自临祭，为之流涕，抚其遗孤，恩若平生。亮上疏请自贬三等；诏以右将军，行丞相事。亮于是引咎责躬，布所失于天下，厉兵讲武，以为后图。亮之出祁山也，天水参军姜维诣亮降。亮美其胆智，使典军事。
 ```
+
 > 夏五月，吴人诱魏扬州牧曹休，战于石亭，大败之。
 
 目　吴使鄱阳太守周鲂诈以郡降于魏。魏扬州牧曹休率步骑十万向皖以应之。八月，吴主权至皖，以陆逊为大都督，朱桓、全琮为左右督，各督三万人以击休。战于石亭，逊令桓、琮为左右翼，三道俱进，冲休伏兵，因驱走之，追至夹石，斩获万余，资仗略尽。
@@ -295,154 +527,296 @@ description: 魏蜀吴三国鼎立，三国征伐导致大量人口损失。
 纲　冬十二月，右将军亮伐魏，围陈仓，不克而还。斩其追将王双。
 
 目　右将军亮闻曹休败，魏兵东下，关中虚弱，欲出兵击魏，群臣多以为疑。亮言于帝曰：“先帝以汉、贼不两立，王业不偏安，故托臣以讨贼。以先帝之明，量臣之才，固知臣才弱敌强；然不伐贼，王业亦亡，惟坐而待亡，孰与伐之！是故托臣而弗疑也。臣受命之日，寝不安席，食不甘味，思惟北征，宜先入南，故五月渡泸，深入不毛。臣非不自惜也，顾王业不可偏安于蜀都，故冒危难以奉先帝之遗意也，而议者谓为非计。今贼适疲于西，又务于东，兵法乘劳，此进趋之时也。且高帝明并日月，谋臣渊深，然涉险被创，危然后安。今陛下未及高帝，谋臣不如良、平，而欲以长计取胜，坐定天下，此臣之未解一也。刘繇、王朗各据州郡，论安言计，动引圣人，群疑满腹，众难塞胸，今岁不战，明年不征，使孙策坐大，遂并江东。此臣之未解二也。臣到汉中，中间期年，已丧赵云等及曲长、屯将七十余人，突将、武骑一千余人，皆数十年所纠合四方之精锐，非一州之所有；若复数年，则损三分之二，当何以图敌！此臣之未解三也。今民穷兵疲而事不可息，事不可息则住与行劳费正等，而不及虚图之，欲以一州之地与贼支久，此臣之未解四也。夫难平者事也，昔先帝兵败于楚，曹操拊手，谓天下已定矣。然先帝东连吴、越，西取巴、蜀，举兵北征，夏侯授首，此操之失计而汉事将成也。其后吴更违盟，关羽毁败，秭归蹉跌，曹丕称帝。凡事如是，难可逆见。臣鞠躬尽力，死而后已，至于成败利钝，非臣之明所能逆睹也。”十二月，引兵数万出散关，围陈仓，不克。亮粮尽，引还。魏将军王双追亮，亮击斩之。
+
 ### 229      （魏）太和三年     （蜀）建兴七年     （吴）四月，孙权即帝位，改元黄龙，（东吴大帝孙权）黄龙元年。
+
 > 春，诸葛亮第三次北伐
+
 > 4月 , 孙权称帝建吴
+
 > 公孙康之子推翻其叔上位
+
 ### 230      （魏）太和四年     （蜀）建兴八年     （吴）黄龙二年
+
 > 吴派将抵达台湾 曹真病故
+
 ### 231      （魏）太和五年     （蜀）建兴九年     （吴）黄龙三年
+
 > 2月，诸葛亮第四次北伐
+
 > 8月, 李严被废为庶人
+
 ### 232      （魏）太和六年     （蜀）建兴十年     （吴）嘉禾元年
+
 公元232年 曹植死
 
 ### 233      （魏）青龙元年     （蜀）建兴十一年   （吴）嘉禾二年
-> 吴魏争相交好公孙渊
-> 孙权三征合肥 失利
-### 234      （魏）青龙二年     （蜀）建兴十二年   （吴）嘉禾三年
-> 2月, 诸葛亮第五次北伐
-> 8月, 诸葛亮病死五丈原
-> 孙权四征合肥, 失利
-> 汉献帝去世
-> 魏延死
-### 235      （魏）青龙三年     （蜀）建兴十三年   （吴）嘉禾四年
-> 杨仪死于狱中
-> 马钧制成司南
-### 236      （魏）青龙四年     （蜀）建兴十四年   （吴）嘉禾五年
-> 张昭去世
-> 高句丽王斩杀吴使送魏
-### 237      （魏）景初元年     （蜀）建兴十五年   （吴）嘉禾六年
-公元237年
 
-公孙渊自立燕王
+> 吴魏争相交好公孙渊
+
+> 孙权三征合肥 失利
+
+### 234      （魏）青龙二年     （蜀）建兴十二年   （吴）嘉禾三年
+
+> 2月, 诸葛亮第五次北伐
+
+> 8月, 诸葛亮病死五丈原
+
+> 孙权四征合肥, 失利
+
+> 汉献帝去世
+
+> 魏延死
+
+### 235      （魏）青龙三年     （蜀）建兴十三年   （吴）嘉禾四年
+
+> 杨仪死于狱中
+
+> 马钧制成司南
+
+### 236      （魏）青龙四年     （蜀）建兴十四年   （吴）嘉禾五年
+
+> 张昭去世
+
+> 高句丽王斩杀吴使送魏
+
+### 237      （魏）景初元年     （蜀）建兴十五年   （吴）嘉禾六年
+
+> 公孙渊自立燕王
+
 ### 238      （魏）景初二年     （蜀）延熙元年     （吴）赤乌元年（八月改元）
+
 > 8月, 司马懿灭公孙渊
+
 > 姜维第一次北伐
+
 ### 239      （魏）景初三年，正月，曹睿崩，曹芳即位（魏齐王曹芳）。 （蜀）延熙二年。 （吴）赤乌二年。
+
 > 正月, 曹睿驾崩，曹芳继位，曹爽、司马懿辅政
+
 ### 240      （魏齐王曹芳）正始元年     （蜀）延熙三年     （吴）赤乌三年
+
 ### 241      （魏）正始二年     （蜀）延熙四年     （吴）赤乌四年
+
 > 诸葛瑾病故
+
 ### 242      （魏）正始三年     （蜀）延熙五年     （吴）赤乌五年
+
 > 孙权出兵海南岛
+
 > 吴 ” 二宫之争 ”
+
 ### 243      （魏）正始四年     （蜀）延熙六年     （吴）赤乌六年
+
 > 费祎主政
+
 > 顾雍病故
+
 ### 244      （魏）正始五年     （蜀）延熙七年     （吴）赤乌七年
+
 > 陆逊拜相
+
 > 姜维第二次北伐
+
 > 魏国大败高句丽
+
 ### 245      （魏）正始六年     （蜀）延熙八年     （吴）赤乌八年
+
 > 陆逊去世
+
 > 魏国再次大败高句丽
+
 ### 246      （魏）正始七年     （蜀）延熙九年     （吴）赤乌九年
+
 > 蒋琬去世, 姜维主政
+
 ### 247      （魏）正始八年     （蜀）延熙十年     （吴）赤乌十年
+
 > 姜维第三次北伐
+
 ### 248      （魏）正始九年     （蜀）延熙十一年   （吴）赤乌十一年
+
 > 司马懿拜相
+
 ### 249      （魏）嘉平元年     （蜀）延熙十二年   （吴）赤乌十二年
+
 > 正月, 司马懿发动高平陵之变，杀大将军曹爽, 夏侯霸降蜀
+
 > 姜维第四次北伐
+
 ### 250      （魏）嘉平二年     （蜀）延熙十三年   （吴）赤乌十三年
+
 > 姜维第五次北伐
+
 > 孙权立孙亮为太子
+
 ### 251      （魏）嘉平三年     （蜀）延熙十四年   （吴）太元元年（五月改元）
+
 > 王淩叛乱（淮南一叛）
+
 > 7月, 司马懿病亡
+
 ### 252    （魏）嘉平四年  （蜀）延熙十五年（吴）太元二年，二月改元神凤，神凤元年，四月，孙权薨，孙亮即位，改元建兴，（东吴会稽王孙亮）建兴元年。
+
 > 司与师为大将军
+
 > 孙权卒, 孙亮立
+
 > 吴魏东兴之战, 诸葛恪胜
+
 ### 253      （魏）嘉平五年     （蜀）延熙十六年   （吴）建兴二年 
+
 > 费祎遇刺身亡
+
 > 姜维第六次北伐
+
 > 孙峻杀诸葛恪 , 权倾朝野
+
 ### 254      （魏）嘉平六年，九月，曹芳被废为齐王，十月，曹髦即位，改元正元，（魏高贵乡公曹髦）正元元年。（蜀）延熙十七年。（吴）五凤元年。
+
 > 9月, 司马师废曹芳 ,立曹髦
+
 > 10月, 孙英杀孙峻未果
+
 > 姜维第七次北伐, 斩徐质
+
 ### 255     （魏）正元二年     （蜀）延熙十八年     （吴）五凤二年
+
 > 毌丘俭，文钦讨伐司马师 （淮南二叛) 丘俭亡，文钦父子奔吴
+
 > 司马师死 司马昭立
+
 > 姜维第八次北伐，大破王经
+
 ### 256     （魏）甘露元年     （蜀）延熙十九年     （吴）太平元年
+
 > 孙綝杀孙峻专权
+
 ### 257     （魏）甘露二年     （蜀）延熙二十年     （吴）太平二年
+
 > 诸葛诞叛乱（淮南三叛）
+
 > 姜维第十次北伐
+
 ### 258     （魏）甘露三年     （蜀）景耀元年    （吴）太平三年，九月，孙亮被废为会稽王，十月，孙休即位，改元永安，（东吴景帝孙休）永安元年。
+
 > 寿春内讧 文氏归魏
+
 > 诸葛涎死 、
+
 > 孙綝废孙亮，立孙休
+
 > 孙休与丁奉定计杀孙綝
+
+
 ### 259     （魏）甘露四年     （蜀）景耀二年    （吴）永安二年
+
 ### 260     （魏）甘露五年，五月，曹髦崩，六月，曹奂继位，改元景元，（魏元帝曹奂）景元元年 。 （蜀）景耀三年。 （吴）永安三年。 
+
 > 5月, 曹髦袭司马昭, 贾充弑君 ,
+
 > 6月, 司马昭立曹奂为君
+
 ### 261     （魏）景元二年 （蜀）景耀四年     （吴）永安四年
+
 > 朝鲜半岛南部诸国向魏进贡
+
 > 拓跋鲜卑向魏进贡
+
 ### 262     （魏）景元三年 （蜀）景耀五年     （吴）永安五年
+
 > 10月, 姜维第11次北伐 惨败 , 退至沓中
+
 > 钟会进馋害死嵇康
+
 ### 263     （魏）景元四年 （蜀）景耀六年，夏，改元炎兴，冬，降魏，蜀亡。     （吴）永安六年
+
 > 8月，魏国三路伐蜀 诸葛瞻父子绵竹战死 、
+
 > 10月, 蜀国灭亡
+
 > 罗宪愤吴降魏
+
 ### 264     （魏）咸熙元年 （吴）永安七年，七月，孙休薨，孙皓即位，改元元兴，（东吴末帝孙皓）元兴元年。
+
 > 邓艾遭诬被捕 、
+
 > 钟会、 姜维谋泄 皆死于乱军中
+
 > 卫瓘杀邓艾灭口、
+
 > 蜀地百城无主 ,罗宪两退吴兵、
+
 > 司马昭称晋王 、
+
 > 孙休驾崩，孙皓继位、
+
 > 魏国染指交州
+
 ### 265     （魏）咸熙二年，十二月，禅位于晋，魏亡。    （吴）甘露元年。     （晋）司马炎受禅于魏，改元泰始，（晋武帝司马炎）泰始元年。
+
 > 8月, 司马昭猝死，司马炎继位
+
 > 12 月，司马炎建立晋国 魏国灭亡
+
 ### 266       （吴）甘露二年，八月，改元宝鼎，宝鼎元年。 （晋）泰始二年。
+
 > 吴扬州诸郡逆流供给吴都 , 怨 12月, 吴还都建业
+
 > 倭国向晋朝贡
+
 ### 267       （吴）宝鼎二年     （晋）泰始三年
+
 ### 268       （吴）宝鼎三年     （晋）泰始四年
+
 > 林邑国 、扶南国向晋朝贡
+
 ### 269       （吴）宝鼎四年，十月，改元建衡，建衡元年。 （晋）泰始五年。
+
 > 吴国出兵交州
+
 ### 270    （吴）建衡二年      （晋）泰始六年
+
 > 西域诸国向晋朝贡
+
 > 吴宗室孙秀叛吴
+
 ### 271    （吴）建衡三年      （晋）泰始七年
+
 > 吴收复交州
-> 丁奉去世
+
 ### 272    （吴）凤皇元年      （晋）泰始八年
+
 > 陆逊之子陆抗击败叛吴的西陵步阐
+
 ### 273    （吴）凤皇二年      （晋）泰始九年
+
 > 孙皓杀史学家韦昭
+
 ### 274    （吴）凤皇三年      （晋）泰始十年
+
 > 陆抗病亡
+
 ### 275    （吴）天策元年      （晋）咸宁元年
+
 ### 276    （吴）天玺元年      （晋）咸宁二年
+
 ### 277    （吴）天纪元年      （晋）咸宁三年
+
 ### 278    （吴）天纪二年      （晋）咸宁四年
+
 > 羊祜死 , 杜预接驻襄阳
+
 ### 279    （吴）天纪三年      （晋）咸宁五年
+
 > 南匈奴左部帅刘豹去世，其子刘渊继位
+
 > 魏国兵分六路展开灭吴战争
+
 ### 280    （吴）天纪四年，四月，孙皓降晋，吴亡。  （晋）太康元年。
+
 > 西晋灭吴
+
 > 至此 , 三国时代结束, 中华重归一统！
 
 >  部分资料来自网络，如侵犯您的权益，请联系我删除！
