--- a/_posts/2022-10-12-读《资治通鉴》札记（九）.md
+++ b/_posts/2022-10-12-读《资治通鉴》札记（九）.md
@@ -7,8 +7,8 @@ date: 2022-12-03 05:01:01
 
 > 接上篇，读《资治通鉴》札记（八）称皇帝设郡县一度量，封禅泰山，始皇崩二世立。
 
-
-> 二世皇帝元年壬辰（前209）
+### 二世皇帝元年壬辰（前209）
+<hr/>
 
 > 冬，十月，戊寅，大赦。
 
@@ -18,3 +18,124 @@ date: 2022-12-03 05:01:01
 
 
 > 秋，七月，阳城陈胜、阳夏吴广起兵于蕲，称大楚。攻大泽乡，拔之，收而攻蕲，蕲下。沿途望风而逃，陈胜乃入据陈。遂自立为王，号“张楚”。当是时，诸郡县苦秦法，争杀长吏以应涉。
+
+> 张耳、陈馀至邯郸，闻周章败，又闻还者多以谗毁诛，乃说武信君武臣自立为王。陈王不得已而喝之，欲使赵西攻秦，为张耳、陈馀劝止，夺燕国故土，攻取常山，上党。
+
+> 九月，沛人刘邦以亭长送徒骊山，徒多道亡，因畏秦法起兵于沛。后刘季乃书帛射城上，遗沛父老，为陈利害。父老乃率子弟共杀沛令，开门迎刘季，立以为沛公，以应诸侯。
+
+> 下相人项燕弟及子，项梁，项籍起于吴。籍少学书，不成，学剑，又不成。项梁怒之。籍曰：“书，足以记名姓而已！剑，一人敌，不足学；学万人敌！”于是项梁教之法，然只略知其意，又不肯竟学。籍长八尺馀，力能扛鼎。
+
+> 狄县人齐故宗室田儋起于齐，自立为齐王，东略定齐地。
+
+> 韩广北攻燕，燕地豪桀欲共立广为燕王。赵王与张耳、陈馀北攻燕，为燕军所得，赵养卒（一个火夫）说以张耳、陈馀欲燕杀赵王以自立，燕将乃归赵王。
+魏地已经平定，诸侯便都想立周市为魏王。周市说：“天下昏乱，忠臣乃见。今天下共畔秦，其义必立魏王后乃可。”派人往陈县迎魏咎，往返五次，陈胜送魏咎还，立为魏王。
+
+二世废卫君角为庶人，卫国正式灭亡。
+
+### 二世皇帝二年癸巳（前208）
+
+<hr/>
+
+> 冬，十月，秦将兵围沛公于丰，沛公出战，破之，令雍齿守丰。十一月，沛公败泗川守壮兵败于薛，杀之。
+
+> 二月馀，章邯追败周章。复走渑池，十馀日，章邯大破之，周章自刎。
+
+> 吴叔围荥阳弗能下。楚将军田臧矫王令以诛吴叔。章邯连破楚数将。
+
+> 二世数诮让李斯：“居三公位，如何令盗如此！”李斯惧，以书对曰：“申子曰‘有天下而不恣睢，命之曰以天下为桎梏’！故明主能行督责之术以独断于上，而莫之敢逆。”二世说，于是行督责益严，秦民益骇惧思乱。
+
+> 赵李良已定常山，秦将诈为二世书以招良。良得书未信，还之邯郸，未至，道逢赵王姊出饮，王姊醉，使骑谢李良。李良素贵，惭其从官。李良已得秦书，固欲反赵，因此怒，遣人追杀王姊，因将其兵袭邯郸，竟杀赵王、邵骚。张耳、陈馀以耳多目者独得脱。
+
+> 章邯已破伍逢，击陈柱国房君，杀之。又进击陈西张贺军。陈王出监战。张贺死。
+
+> 陈胜之死：腊月，陈王之汝阴，还，至下城父，其御庄贾杀陈王以降。初，陈涉既为王，其故人皆往依之。或说陈王曰：“客愚无知，颛妄言，轻威。”陈王斩之。诸故人皆自引去，由是无亲陈王者。
+
+> 陈王故涓人（内侍）将军吕臣为苍头军，起新阳，攻陈，下之，杀庄贾，复以陈为楚。葬陈王于砀，谥曰隐王。
+
+> 初，陈王令铚人宋留将兵定南阳，入武关。留已徇南阳，闻陈王死，南阳复为秦，宋留以军降，二世车裂留以徇。魏周市将兵略地丰、沛，使人招雍齿，即以丰降魏。沛公攻之，不克。
+赵张耳、陈馀收其散兵数万，击李良。良败，走归章邯。张耳、陈馀乃求得赵歇，立歇为赵王，居信都。
+
+> 东阳宁君、秦嘉闻陈王军败，乃立景驹为楚王，引兵之方与，欲击秦军定陶下；使公孙庆使齐，欲与之并力俱进。齐王因陈王战败，不知其死生杀公孙庆。
+
+> 秦左、右校复攻陈，下之。吕将军走，徼兵复聚，与番盗黥布相遇，攻击秦左、右校，破之青波，复以陈为楚。
+
+> 黥布者，六人也，姓英氏，坐法黥，以刑徒论输骊山。骊山之徒数十万人，布皆与其徒长豪杰交通，乃率其曹耦，亡之江中为群盗。番阳令吴芮，甚得江湖间心，号曰番君。布往见之，其众已数千人。番君乃以女妻之，使将其兵击秦。
+
+> 楚王景驹在留，沛公往从之。张良亦聚少年百馀人，欲往从景驹，道遇沛公，遂属焉。沛公拜良为厩将。良数以太公兵法说沛公，沛公善之，常用其策。良为他人言，皆不省。良曰：“沛公殆天授！”故遂从不去。沛公与良俱见景驹，欲请兵以攻丰。时章邯司马尸二将兵北定楚地，屠相，至砀。东阳宁君、沛公引兵西，战萧西，不利，还，收兵聚留。二月，攻砀，三日，拔之。收砀兵得六千人，与故合九千人。三月，攻下邑，拔之。还击丰，不下。
+
+> 广陵人召平为陈王徇广陵，未下。闻陈王败走，章邯且至，乃渡江，矫陈王令，拜项梁为楚上柱国，曰：“江东已定，急引兵西击秦！”梁乃以八千人渡江而西。闻陈婴已下东阳，使使欲与连和俱西。陈婴者，故东阳令史，居县中，素信谨，称为长者。东阳少年杀其令，相聚得二万人，欲立婴为王。婴母谓婴曰：“自我为汝家妇，未尝闻汝先世之有贵者。今暴得大名，不祥；不如有所属。事成，犹得封侯；事败，易以亡，非世所指名也。”婴乃不敢为王，谓其军吏曰：“项氏世世将家，有名于楚，今欲举大事，将非其人不可。我倚名族，亡秦必矣！”其众从之，乃以兵属梁。
+
+> 英布既破秦军，引兵而东；闻项梁西渡淮，布与蒲将军皆以其兵属焉。项梁众凡六七万人，军下邳。
+景驹、秦嘉军彭城东，欲以距梁。梁谓军吏曰：“陈王先首事，战不利，未闻所在。今秦嘉倍陈王而立景驹，逆无道！”乃进兵击秦嘉，秦嘉军败走。追之，至胡陵，嘉还战。一日，嘉死，军降；景驹走死梁地。
+
+> 梁已并秦嘉军，军胡陵，将引军而西。章邯军至栗，项梁使别将硃鸡石、馀樊君与战。馀樊君死，硃鸡石军败，亡走胡陵。梁乃引兵入薛，诛硃鸡石。
+
+> 沛公从骑百馀往见梁，梁与沛公卒五千人，五大夫将十人。沛公还，引兵攻丰，拔之。雍齿奔魏。
+
+> 项梁使项羽别攻襄城，襄城坚守不下；已拔，皆坑之，还报。
+
+> 梁闻陈王定死，召诸别将会薛计事，沛公亦往焉。居鄛人范增，年七十，素居家，好奇计，往说项梁曰：“陈胜败，固当。夫秦灭六国，楚最无罪。自怀王入秦不反，楚人怜之至今。故楚南公曰：‘楚虽三户，亡秦必楚。’今陈胜首事，不立楚后而自立，其势不长。今君起江东，楚蜂起之将皆争附君者，以君世世楚将，为能复立楚之后也。”于是项梁然其言，乃求得楚怀王孙心于民间，为人牧羊。夏，六月，立以为楚怀王，从民望也。陈婴为上柱国，封五县，与怀王都盱眙。项梁自号为武信君。
+张良说项梁曰：“君已立楚后，而韩诸公子横阳君成最贤，可立为王，益树党。”项梁使良求韩成，立以为韩王，以良为司徒，与韩王将千馀人西略韩地，得数城，秦辄复取之；往来为游兵颍川。
+
+> 章邯已破陈王，乃进兵击魏王于临济。魏王使周市出，请救于齐、楚。齐王儋及楚将项它皆将兵随市救魏。章邯夜衔枚击，大破齐、楚军于临济下，杀齐王及周市。魏王咎为其民约降，约定，自烧杀。其弟豹亡走楚，楚怀王予魏豹数千人，复徇魏地。齐田荣收其兄儋馀兵，东走东阿，章邯追围之。齐人闻齐王儋死，乃立故齐王建之弟假为王，田角为相，角弟间为将，以距诸侯。
+
+> 秋，七月，大霖雨。武信君引兵攻亢父，闻田荣之急，乃引兵击破章邯军东阿下，章邯走而西。田荣引兵东归齐。武信君独追北，使项羽、沛公别攻城阳，屠之。楚军军濮阳东，复与章邯战，又破之。章邯复振，守濮阳，环水。沛公、项羽去，攻定陶。
+
+> 八月，田荣击逐齐王假，假亡走楚，田角亡走赵。田间前救赵，因留不敢归。田荣乃立儋子市为齐王，荣相之，田横为将，平齐地。章邯兵益盛，项梁数使使告齐、赵发兵共击章邯。田荣曰：“楚杀田假，赵杀角、间，乃出兵。”楚、赵不许。田荣怒，终不肯出兵。
+
+#### 李斯之死
+
+> 郎中令赵高恃恩专恣，恐大臣入朝奏事言之，乃说二世曰：“天子之所以贵者，但以闻声，群臣莫得见其面故也。且陛下富于春秋，未必尽通诸事，谴举有不当者，则见短于大臣，非所以示神明于天下也。陛下不如深拱禁中，与臣及侍中习法者待事，事来有以揆之。如此，则大臣不敢奏疑事，天下称圣主矣。”二世用其计，乃不坐朝廷见大臣，常居禁中。赵高侍中用事，事皆决于赵高。高闻李斯以为言，乃见丞相曰：“关东群盗多，今上急，益发繇，治阿房宫，聚狗马无用之物。臣欲谏，为位贱，此真君侯之事。君何不谏？”李斯曰：“吾欲言之久矣。今时上不坐朝廷，常居深宫。吾所言者，不可传也。欲见，无闲。”赵高曰：“君诚能谏，请为君侯上闲，语君。”于是赵高待二世方燕乐，妇女居前，使人告丞相：“上方闲，可奏事。”丞相至宫门上谒。如此者三。二世怒曰：“吾常多闲日，丞相不来；吾方燕私，丞相辄来请事？”赵高因曰：“夫沙丘之谋，丞相与焉。今陛下已立为帝，其意亦望裂地而王矣。且丞相长男李由为三川守，楚盗陈胜等皆丞相傍县之子，以故楚盗公行，过三川城，守不肯击。高闻其文书相往来，未得其审，故未敢以闻。且丞相居外，权重于陛下。”二世以为然，欲案丞相，恐其不审，乃先使人按验三川守与盗通状。李斯闻之，因上书言赵高之短曰：“高擅利擅害，与陛下无异。昔田常相齐简公，窃其恩威，下得百姓，上得群臣，卒弑齐简公而取齐国，此天下所明知也。今高有邪佚之志，危反之行。陛下不图，臣恐其必为变也。”二世曰：“何哉！夫高，故宦人也，以忠得进，以信守位，朕实贤之。而君疑之，何也？且朕非属赵君，当谁任哉！且赵君为人，精廉强力，下知人情，上能适朕，君其勿疑！”二世雅爱信高，恐李斯杀之，乃私告赵高。高曰：“丞相所患者独高，高已死，丞相即欲为田常所为。”是时，盗贼益多，而关中卒发东击盗者无已。右丞相冯去疾、左丞相李斯、将军冯劫进谏止阿房宫作者，减省四边戍、转。”二世曰：“凡所为贵有天下者，得肆意极欲，主重明法，下不敢为非，以制御海内矣。"下去疾、斯、劫吏，案责他罪。去疾、劫自杀，独李斯就狱。二世以属赵高治之，斯上书述说其功，赵高使吏弃去不奏，曰：“囚安得上书！”赵高使其客十馀辈诈为御史、谒者、侍中，更往覆讯斯，斯更以其实对，辄使人复榜之。后遂具斯五刑，论腰斩咸阳市，而夷三族。二世乃以赵高为丞相，事无大小皆决焉。
+
+> 项梁已破章邯于东阿，引兵西，北至定陶，再破秦军。项羽、沛公又与秦军战于雍丘，大破之，斩李由。项梁益轻秦，有骄色。二世悉起兵益章邯击楚军，大破之定陶，项梁死。时连雨，自七月至九月。项羽、沛公攻外黄未下，去，攻陈留。闻武信君死，士卒恐，乃与将军吕臣引兵而东，徙怀王自盱眙都彭城。吕臣军彭城东，项羽军彭城西，沛公军砀。
+
+> 魏豹下魏二十馀城，楚怀王立豹为魏王。
+
+> 后九月，楚怀王并吕臣、项羽军，自将之；以沛公为砀郡长，封武安侯，将砀郡兵；封项羽为长安侯，号为鲁公；吕臣为司徒，其父吕青为令尹。章邯已破项梁，以为楚地兵不足忧，乃渡河，北击赵，大破之。引兵至邯郸，皆徙其民河内，夷其城郭。张耳与赵王歇走入巨鹿城，王离围之。陈馀北收常山兵，得数万人，军巨鹿北。章邯军巨鹿南棘原。赵数请救于楚。
+
+> 高陵君显在楚，见楚王曰：“宋义论武信君之军必败，居数日，军果败。兵未战而先见败征，此可谓知兵矣。”王召宋义与计事而大说之，因置以为上将军。项羽为次将，范增为末将，以救赵。诸别将皆属宋义，号为“卿子冠军”。
+
+> 初，楚怀王与诸将约：“先入定关中者王之。”当是时，秦兵强，常乘胜逐北，诸将莫利先入关。独项羽怨秦之杀项梁，奋势愿与沛公西入关。怀王诸老将皆曰：“项羽为人，慓悍猾贼，尝攻襄城，襄城无遗类，皆坑之，诸所过无不残灭。且楚数进取，前陈王、项梁皆败，不如更遣长者，扶义而西，告谕秦父兄。秦父兄苦其主久矣，今诚得长者往，无侵暴，宜可下。项羽不可遣，独沛公素宽大长者，可遣。”怀王乃不许项羽，而遣沛公西略地，收陈王、项梁散卒以伐秦。
+
+> 沛公道砀，至阳城与杠里，攻秦壁，破其二军。
+
+### 二世皇帝下三年（甲午，前二零七年）
+
+<hr/>
+
+> 冬，十月，齐将田都畔田荣，助楚救赵。
+
+> 沛公攻破东郡尉于成武。
+
+> 宋义行至安阳，留四十六日不进。天寒，大雨，士卒冻饥。十一月，项羽晨朝将军宋义，即其帐中斩宋义头。诸将皆慑服，莫敢枝梧，乃相与共立羽为假上将军。使人追宋义子，及之齐，杀之。使桓楚报命于怀王。怀王因使羽为上将军。
+
+> 十二月，沛公引兵至栗，遇刚武侯，夺其军四千馀人，并之；与魏将皇欣、武满军合攻秦军，破之。
+
+> 故齐王建孙安下济北，从项羽救赵。
+
+#### 巨鹿之战
+
+> 章邯筑甬道属河，饷王离。王离兵食多，急攻巨鹿。巨鹿城中食尽、兵少，不敌秦，不敢前。当是时，齐师、燕师皆来救赵，张敖亦北收代兵，得万馀人，来，皆壁馀旁，未敢击秦。项羽已杀卿子冠军，威震楚国，乃遣当阳君、薄将军将卒二万渡河救巨鹿。战少利，绝章邯甬道，王离军乏食。陈馀复请兵。项羽乃悉引兵渡河，皆沈船，破釜、甑，烧庐舍，持三日粮，以示士卒必死，无一还心。于是至则围王离，与秦军遇，九战，大破之，章邯引兵却。诸侯兵乃敢进击秦军，遂杀苏角，虏王离；涉间不降，自烧杀。
+
+> 春，二月，沛公北击昌邑，遇彭越，彭越以其兵从沛公。遂助沛公攻昌邑。昌邑未下，沛公引兵西过高阳。沛公至高阳传舍，使人召郦生。郦生至，入谒。郦生因言六国从横时。沛公喜，赐郦生食，于是遣郦生行，沛公引兵随之，遂下陈留。号郦食其为广野君。
+
+> 三月，沛公攻开封，未拔。西与秦将杨熊会战白马，又战曲遇东，大破之。杨熊走之荥阳，二世使使者斩之以徇。
+
+> 夏，四月，沛公南攻颍川，屠之。因张良，遂略韩地。时赵别将司马卬方欲渡河入关。沛公乃北攻平阴，绝河津南，战洛阳东。军不利，南出轘辕。张良引兵从沛公。沛公令韩王成留守阳翟，与良俱南。
+
+> 六月，与南阳守齮战犨东，破之，略南阳郡；七月，南阳守齮降，封为殷侯，封陈恢千户。引兵西，无不下者。至丹水，高武侯鳃、襄侯王陵降。还攻胡阳，遇番君别将梅鋗，与偕攻析、郦，皆降。所过亡得卤掠，秦民皆喜。
+
+> 王离军既没，章邯军棘原，项羽军漳南，相持未战。秦军数却，二世使人让章邯。章邯恐，章邯狐疑，阴使候始成使项羽，欲约。约未成，项羽使蒲将日夜引兵度三户，军漳南，与秦军战，再破之。项羽悉引兵击秦军汙水上，大破之。章邯使人见项羽，欲约。已盟，章邯见项羽而流涕，为言赵高。项羽乃立章邯为雍王，置楚军中，使长史欣为上将军，将秦军为前行。
+瑕丘申阳下河南，引兵从项羽。
+
+#### 指鹿为马
+
+> 初，中丞相赵高欲专秦权，恐群臣不听，乃先设验，持鹿献于二世曰：“马也。”二世笑曰：“丞相误邪，谓鹿为马！”问左右，左右或默，或言马以阿顺赵高，或言鹿者。高因阴中诸言鹿者以法。后群臣皆畏高，莫敢言其过。八月，沛公将数万人攻武关，屠之。高恐二世恐诛及其身，乃谢病不朝。
+
+#### 秦二世之死
+
+> 二世梦白虎啮其左骖马，杀之，心不乐，乃斋于望夷宫，欲祠泾水，沈四白马。使使责让高以盗贼事。高惧，乃阴与其婿咸阳令阎乐及弟赵成谋。乐遂斩卫令，直将吏入，行射郎、宦者。郎、宦者大惊，或走，或格。格者辄死，死者数十人。郎中令与乐俱入，射上幄坐帏。二世怒，召左右，左右皆惶扰不斗。阎乐前即二世，数曰：“足下骄恣，诛杀无道，天下共畔足下。足下其自为计！”二世曰：“丞相可得见否？”乐曰：“不可！”二世曰：“吾愿得一郡为王。”弗许。又曰：“愿为万户侯。”弗许。曰：“愿与妻子为黔首，比诸公子。”阎乐曰：“臣受命于丞相，为天下诛足下。足下虽多言，臣不敢报！”二世自杀。阎乐归告以诛二世之状，曰：“秦故王国，始皇君天下，故称帝。今六国复自立，秦地益小，乃以空名为帝，不可。宜为王如故，便。”乃立子婴为秦王。以黔首葬二世社南宜春苑中。
+
+### 子婴杀赵高
+
+> 九月，赵高令子婴斋戒，当庙见，受玉玺。斋五日。子婴与其子二人谋曰：“丞相高杀二世望夷宫，恐群臣诛之，乃佯以义立我。我闻赵高乃与楚约，灭秦宗室而分王关中。今使我斋、见庙，此欲因庙中杀我。我称病不行，丞相必自来，来则杀之。”高使人请子婴数辈，子婴不行。高果自往，曰：“宗庙重事，王奈何不行？”子婴遂刺杀高于斋宫，三族高家以徇。遣将兵距峣关，沛公引兵绕峣关，逾蒉山，击秦军，大破之蓝田南。遂至蓝田，又战其北，秦兵大败。
