--- a/_posts/2022-10-12-读《资治通鉴》札记（九）.md
+++ b/_posts/2022-10-12-读《资治通鉴》札记（九）.md
@@ -38,9 +38,7 @@ date: 2022-12-03 05:01:01
 
 > 冬，十月，秦将兵围沛公于丰，沛公出战，破之，令雍齿守丰。十一月，沛公败泗川守壮兵败于薛，杀之。
 
-> 二月馀，章邯追败周章。复走渑池，十馀日，章邯大破之，周章自刎。
-
-> 吴叔围荥阳弗能下。楚将军田臧矫王令以诛吴叔。章邯连破楚数将。
+> 二月馀，章邯追败周章。复走渑池，十馀日，章邯大破之，周章自刎。吴叔围荥阳弗能下。楚将军田臧矫王令以诛吴叔。章邯连破楚数将。
 
 > 二世数诮让李斯：“居三公位，如何令盗如此！”李斯惧，以书对曰：“申子曰‘有天下而不恣睢，命之曰以天下为桎梏’！故明主能行督责之术以独断于上，而莫之敢逆。”二世说，于是行督责益严，秦民益骇惧思乱。
 
@@ -103,15 +101,9 @@ date: 2022-12-03 05:01:01
 
 <hr/>
 
-> 冬，十月，齐将田都畔田荣，助楚救赵。
+> 冬，十月，齐将田都畔田荣，助楚救赵。沛公攻破东郡尉于成武。宋义行至安阳，留四十六日不进。天寒，大雨，士卒冻饥。十一月，项羽晨朝将军宋义，即其帐中斩宋义头。诸将皆慑服，莫敢枝梧，乃相与共立羽为假上将军。使人追宋义子，及之齐，杀之。使桓楚报命于怀王。怀王因使羽为上将军。
 
-> 沛公攻破东郡尉于成武。
-
-> 宋义行至安阳，留四十六日不进。天寒，大雨，士卒冻饥。十一月，项羽晨朝将军宋义，即其帐中斩宋义头。诸将皆慑服，莫敢枝梧，乃相与共立羽为假上将军。使人追宋义子，及之齐，杀之。使桓楚报命于怀王。怀王因使羽为上将军。
-
-> 十二月，沛公引兵至栗，遇刚武侯，夺其军四千馀人，并之；与魏将皇欣、武满军合攻秦军，破之。
-
-> 故齐王建孙安下济北，从项羽救赵。
+> 十二月，沛公引兵至栗，遇刚武侯，夺其军四千馀人，并之；与魏将皇欣、武满军合攻秦军，破之。故齐王建孙安下济北，从项羽救赵。
 
 #### 巨鹿之战
 
@@ -136,6 +128,8 @@ date: 2022-12-03 05:01:01
 
 > 二世梦白虎啮其左骖马，杀之，心不乐，乃斋于望夷宫，欲祠泾水，沈四白马。使使责让高以盗贼事。高惧，乃阴与其婿咸阳令阎乐及弟赵成谋。乐遂斩卫令，直将吏入，行射郎、宦者。郎、宦者大惊，或走，或格。格者辄死，死者数十人。郎中令与乐俱入，射上幄坐帏。二世怒，召左右，左右皆惶扰不斗。阎乐前即二世，数曰：“足下骄恣，诛杀无道，天下共畔足下。足下其自为计！”二世曰：“丞相可得见否？”乐曰：“不可！”二世曰：“吾愿得一郡为王。”弗许。又曰：“愿为万户侯。”弗许。曰：“愿与妻子为黔首，比诸公子。”阎乐曰：“臣受命于丞相，为天下诛足下。足下虽多言，臣不敢报！”二世自杀。阎乐归告以诛二世之状，曰：“秦故王国，始皇君天下，故称帝。今六国复自立，秦地益小，乃以空名为帝，不可。宜为王如故，便。”乃立子婴为秦王。以黔首葬二世社南宜春苑中。
 
-### 子婴杀赵高
+#### 子婴杀赵高
 
 > 九月，赵高令子婴斋戒，当庙见，受玉玺。斋五日。子婴与其子二人谋曰：“丞相高杀二世望夷宫，恐群臣诛之，乃佯以义立我。我闻赵高乃与楚约，灭秦宗室而分王关中。今使我斋、见庙，此欲因庙中杀我。我称病不行，丞相必自来，来则杀之。”高使人请子婴数辈，子婴不行。高果自往，曰：“宗庙重事，王奈何不行？”子婴遂刺杀高于斋宫，三族高家以徇。遣将兵距峣关，沛公引兵绕峣关，逾蒉山，击秦军，大破之蓝田南。遂至蓝田，又战其北，秦兵大败。
+
+> 评：秦得天下何其难哉，而失天下何其速也。几十代秦公艰苦创业，两年间便土崩瓦解，呜呼！但使二世中主之才，或有良臣辅助亦不至此也！
