--- a/_posts/2022-01-05-哀悼我的表哥.md
+++ b/_posts/2022-01-05-哀悼我的表哥.md
@@ -9,7 +9,7 @@ date: 2021-05-01 05:01:01
 
 > 起先我真没有当回事，因为表哥总是总不小心，之前已经摔过好几回了，可能这次把我父亲叫回去是不是有点严重，需要钱怎么的。但是我也没敢问老家那边，一整晚也没有休息好。
 
-> 果不其然，第二天噩耗便传过来了，说是表哥已经昨天晚上就已经没了。 当时我就控制不住，偷偷找了个角落痛苦了一场。
+> 果不其然，第二天噩耗便传过来了，说是表哥已经昨天晚上就已经没了。 当时我就控制不住，偷偷找了个角落痛哭了一场。
 
 > 让后当天我就赶紧给我侄女，也就是表格的女儿打电话，因为她也在西安这边，安排跟学校请假。我开车把她接上，跟我母亲一道回了老家。
 
@@ -24,3 +24,5 @@ date: 2021-05-01 05:01:01
 > 丧事很简单，简单的开了个追悼会，周围的同事亲友来哭奠了一场，第二天就埋在了我们祖坟，那块墓地还是我当时跟着去给划定的。但是埋的时候我没有去，主要是怕控制不住情绪，所以当时安排了一些其他后事处理。
 
 > 后来几次路过那座新坟我都不住的回望，多么希望那个坟头能够消失，表哥能出现在我的眼前。
+
+> 表哥是我小时候最好的玩伴了，当然了他很调皮，胆子也很大。小时候经常带着我们这些小弟弟们胡闹。他不爱上学，初中毕业就辍学了。后来出去学了些技术，在外边打了几年工又回来了。然后就一直在村子里。在临近的厂子里打工。这几年在工厂也学到了不少东西，也算是技术工人了。家中收入也尚可，子女也尚未成人，就这么意外的撒手人寰，实在让人悲痛。
