--- a/_posts/2022-10-12-读《资治通鉴》札记（九）.md
+++ b/_posts/2022-10-12-读《资治通鉴》札记（九）.md
@@ -44,8 +44,7 @@ date: 2022-12-03 05:01:01
 > 腊月，陈王之汝阴，还，至下城父，其御庄贾杀陈王以降。初，陈涉既为王，其故人皆往依之。或说陈王曰：“客愚无知，颛妄言，轻威。”陈王斩之。诸故人皆自引去，由是无亲陈王者。
 陈王故涓人（内侍）将军吕臣为苍头军，起新阳，攻陈，下之，杀庄贾，复以陈为楚。葬陈王于砀，谥曰隐王。
 
-> 初，陈王令铚人宋留将兵定南阳，入武关。留已徇南阳，闻陈王死，南阳复为秦，宋留以军降，二世车裂留以徇。魏周市将兵略地丰、沛，使人招雍齿，即以丰降魏。沛公攻之，不克。
-赵张耳、陈馀收其散兵数万，击李良。良败，走归章邯。张耳、陈馀乃求得赵歇，立歇为赵王，居信都。
+> 初，陈王令铚人宋留将兵定南阳，入武关。留已徇南阳，闻陈王死，南阳复为秦，宋留以军降，二世车裂留以徇。魏周市将兵略地丰、沛，使人招雍齿，即以丰降魏。沛公攻之，不克。赵张耳、陈馀收其散兵数万，击李良。良败，走归章邯。张耳、陈馀乃求得赵歇，立歇为赵王，居信都。
 
 
 > 黥布者，六人也，姓英氏，坐法黥，以刑徒论输骊山。骊山之徒数十万人，布皆与其徒长豪杰交通，乃率其曹耦，亡之江中为群盗。番阳令吴芮，甚得江湖间心，号曰番君。布往见之，其众已数千人。番君乃以女妻之，使将其兵击秦。
@@ -63,8 +62,6 @@ date: 2022-12-03 05:01:01
 > 章邯已破陈王，乃进兵击魏王于临济。魏王使周市出，请救于齐、楚。齐王儋及楚将项它皆将兵随市救魏。章邯夜衔枚击，大破齐、楚军于临济下，杀齐王及周市。魏王咎为其民约降，约定，自烧杀。其弟豹亡走楚，楚怀王予魏豹数千人，复徇魏地。齐田荣收其兄儋馀兵，东走东阿，章邯追围之。齐人闻齐王儋死，乃立故齐王建之弟假为王，田角为相，角弟间为将，以距诸侯。
 
 > 秋，七月，大霖雨。武信君引兵攻亢父，闻田荣之急，乃引兵击破章邯军东阿下，章邯走而西。田荣引兵东归齐。武信君独追北，使项羽、沛公别攻城阳，屠之。楚军军濮阳东，复与章邯战，又破之。章邯复振，守濮阳，环水。沛公、项羽去，攻定陶。
-
-> 八月，田荣击逐齐王假，假亡走楚，田角亡走赵。田间前救赵，因留不敢归。田荣乃立儋子市为齐王，荣相之，田横为将，平齐地。章邯兵益盛，项梁数使使告齐、赵发兵共击章邯。田荣曰：“楚杀田假，赵杀角、间，乃出兵。”楚、赵不许。田荣怒，终不肯出兵。
 
 #### 李斯之死
 
