--- a/_posts/2022-12-27-读《资治通鉴》札记（十）.md
+++ b/_posts/2022-12-27-读《资治通鉴》札记（十）.md
@@ -10,26 +10,42 @@ date: 2022-12-27 15:43:01
 ### 太祖高皇帝元年乙未（前206）
 
 <hr/>
+
 > 冬，十月，沛公至霸上。秦王子婴素车、白马，系颈以组，封皇帝玺、符、节，降轵道旁。或言诛之。沛公曰：“始怀王遣我，固以能宽容。且人已降，杀之不祥。”乃以属吏，自此秦亡。沛公西入咸阳，诸将皆争走金帛财物之府分之。萧何独先入收秦丞相府图籍藏之。沛公见秦室之奢，意欲留居之。张良曰：“秦为无道，故沛公得至此！”沛公乃还军霸上。十一月，沛公悉召诸县父老、豪桀，与关中父老约法三章，民又益喜，唯恐沛公不为秦王。
+
 #### 鸿门宴
+
 > 项羽既定河北，率诸侯兵欲西入关。以秦降吏卒尚众，坑秦卒二十馀万人新安城南，独与章邯、长史欣、都尉翳入秦。当是时，项羽兵四十万，号百万，在新丰鸿门；沛公兵十万，号二十万，在霸上。范增说项羽曰：“沛公居山东时，贪财好色。今入关，财物无所取，妇女无所幸，此其志不在小。急击勿失！”于是约沛公会鸿门，意欲除之。楚左尹项伯与张良善，夜驰见之，具告以事。沛公另项伯夜返以告项羽：“日夜望将军至，岂敢反乎”。项伯言于项羽：“今人有大功而击之，不义也”，项羽许诺。沛公旦日从百馀骑来见项羽鸿门，项羽因留沛公与饮。范增数目项羽，项羽不应。范增召项庄，谓曰：“以剑舞，因击沛公于坐，杀之。”庄则入为寿，寿毕，请以剑舞。项庄拔剑起舞。项伯亦拔剑起舞，常以身翼蔽沛公，庄不得击。哙即带剑拥盾入。沛公起如厕，因招樊哙出。樊哙曰：“如今人方为刀俎，我方为鱼肉，何辞为！”于是遂去。鸿门去霸上四十里，留张良使谢项羽，以白璧献羽，玉斗与亚父。居数日，项羽引兵西，屠咸阳，杀秦降王子婴，烧秦宫室，火三月不灭，收其货宝、妇女而东。秦民大失望。韩生说项羽曰：“关中阻山带河，四塞之地，地肥饶，可都以霸。”项羽心思东归，曰：“富贵不归故乡，如衣绣夜行，谁知之者！”韩生退曰：“人言楚人沐猴而冠耳，果然！”项羽闻之，烹韩生。
 
 > 项羽使人致命怀王，怀王曰：“如约。”项羽怒，春，正月，羽阳尊怀王为义帝，徙义帝于江南，都郴。
+
 > 二月，羽分天下王诸将。羽自立为西楚霸王，王梁、楚地九郡，都彭城。立沛公为汉王，王巴、蜀、汉中，都南郑。而三分关中。章邯为雍王，都废丘。长史欣者，尝有德于项梁；都尉董翳劝章邯降楚。故立欣为塞王，王咸阳以东，至河，都栎阳；立翳为翟王，王上郡，都高奴。又分封其它诸王侯。
+
 > 汉王怒，欲攻项羽，萧何谏曰：“臣愿大王王汉中，养其民以致贤人，收用巴、蜀，还定三秦，天下可图也。”汉王曰：“善！”乃遂就国，以何为丞相。项王使卒三万人从汉王之国。张良送至褒中，汉王遣良归韩；良因说汉王烧绝所过栈道，以备诸侯盗兵，且示项羽无东意。 初，淮阴人韩信，家贫，受漂母之白眼和淮阴屠中少年胯下之辱。后投靠项羽又不为羽所用。萧何月下追韩信，后为萧何所荐，为汉王所重拜为大将。韩信说汉王先定关中之策。八月，汉王引兵从故道出，关中迅速平定。项王以故吴令郑昌为韩王，以距汉。张良遗项王书曰：“汉王失职，欲得关中，如约即止，不敢东。”又以齐、梁反书遗项王,项王以此故无西意，而北击齐。项王使趣义帝行，其群臣、左右稍稍叛之。
 
 ### 太祖高皇帝二年丙申（前205）
 <hr/>
+
 > 冬，十月，项王密使九江、衡山、临江王击义帝，杀之江中。
+
 > 张良自韩间行归汉，汉王以为成信侯。 汉王如陕，镇抚关外父老。河南王申阳降，置河南郡。汉王以韩襄王孙信为韩太尉，将兵略韩地。信急击韩王昌于阳城，昌降。十一月，立信为韩王，常将韩兵从汉王。汉王还都栎阳。 诸将拔陇西。
+
 > 三月，汉王自临晋渡河。魏王豹降，将兵从；下河内，虏殷王卬，置河内郡。
+
 > 汉王南渡平阴津，至洛阳新城。三老董公遮说王曰：“‘兵出无名，事故不成’。”于是汉王为义帝发丧，哀临三日，发使告诸侯曰：“天下共立义帝，北面事之。今项羽放杀义帝江南，大逆无道！寡人悉发关中兵，收三河士，南浮江、汉以下，愿从诸侯王击楚之杀义帝者！”。汉王以故得率诸侯兵凡五十六万人伐楚。项王闻之，令诸将击齐，击汉军而东至彭城，大破汉军，而汉王乃得与数十骑遁去，家皆亡，不与汉王相见。
+
 > 是时，吕后兄周吕侯为汉将兵，居下邑。汉王间往从之，稍稍收其士卒。诸侯皆背汉，复与楚。塞王欣、翟王翳亡降楚。
+
 > 五月，汉王至荥阳，诸败军皆会，萧何亦发关中老弱未傅者悉诣荥阳，汉军复大振。汉王拜灌婴为中大夫令，李必、骆甲为左右校尉，将骑兵击楚骑于荥阳东，大破之。
+
 > 初，阳武人陈平归汉王于脩武，因魏无知求见汉王。汉王召入，与语而说之。是日，即拜平为都尉，使为参乘，典护军。诸将尽讙曰：“大王一日得楚之亡卒，未知其高下，而即与同载，反使监护长者！”。 周勃、灌婴等言于汉王：“陈平居家时盗其嫂；事魏不容，亡归楚，又亡归汉，受诸将金！”汉王疑之，召让魏无知。无知曰：“臣进奇谋之士，顾其计诚足以利国家不耳。盗嫂、受金，又何足疑乎！”汉王召让平，平曰：“魏王不能用臣说，故去；事项王，项王不能信人。闻汉王能用人，故归大王。臣裸身来，不受金无以为资。”汉王乃谢，厚赐，拜为护军中尉，诸将乃不敢复言。
+
 > 魏王豹谒归视亲疾；至则绝河津，反为楚。
+
 > 壬午，立子盈为太子。
+
 > 汉兵引水灌废丘，废丘降，章邯自杀。尽定雍地，以为中地、北地、陇西郡。
+
 > 秋，八月，汉王如荥阳，命萧何守关中。九月，信击虏豹，传诣荥阳；悉定魏地，置河东、上党、太原郡。后九月，信破代兵，禽夏说于阏与。信之下魏破代，汉辄使人收其精兵诣荥阳以距楚。
 
 ### 太祖高皇帝三年丁酉（前204）
@@ -37,21 +53,29 @@ date: 2022-12-27 15:43:01
 <hr/>
 
 > 冬，十月，韩信、张耳以兵数万东击赵。赵王及成安君陈馀闻之，聚兵井陉口，号二十万。信所出奇兵二千骑共候赵空壁逐利，则驰入赵壁，皆拔赵旗，立汉赤帜二千。赵军已不能得信等，兵遂乱，遁走，于是汉兵夹击，大破赵军，斩成安君泜水上，禽赵王歇。信募生得广武君者予千金。有缚致麾下者，信解其缚，东乡坐，师事之。从其策，发使使燕，燕从风而靡；遣使报汉，且请以张耳王赵，汉王许之。楚数使奇兵渡河击赵，张耳、韩信往来救赵，因行定赵城邑，发兵诣汉。
+
 > 随何至九江，说服九江王英布畔楚与汉。于是杀楚使者，因起兵而攻楚。
 
 > 楚数侵夺汉甬道，汉军乏食。汉王与郦食其谋桡楚权，食其建议汉王立六国之后。食其未行，张良从外来谒。曰：“今复立六国之后，天下游士各归事其主，从其亲戚，反其故旧、坟墓，陛下与谁取天下乎？！”因此刘邦取消了立流过之后的想法。
 
 > 汉王谓陈平曰：“天下纷纷，何时定乎？”陈平曰：“大王诚能捐数万斤金，行反间，间其君臣，以疑其心。项王为人，意忌信谗，必内相诛，汉因举兵而攻之，破楚必矣。”汉王曰：“善！”乃出黄金四万斤与平，恣所为，不问其出入。平多以金纵反间于楚军，项王果意不信钟离昩等。
+
 > 夏，四月，楚围汉王于荥阳，汉王请和，割荥阳以西者为汉。亚父劝羽急攻荥阳。项羽使使至汉，陈平使为太牢具。举进，见楚使，即佯惊曰：“吾以为亚父使，乃项王使！”果然亚父为项羽所疑，未至彭城，疽发背而死。五月，将军纪信言于汉王曰：“事急矣！臣请诳楚，王可以间出。”于是陈平夜出女子东门二千馀人，楚因而四面击之。纪信乃乘王车，黄屋左纛，曰：“食尽，汉王降楚。”楚皆呼万岁，之城东观。以故汉王得与数十骑出西门遁去，令韩王信与周苛、魏豹、枞公守荥阳。羽见纪信，问：“汉王安在？”曰：“已出去矣。”羽烧杀信。汉王出荥阳，至成皋，入关，收兵欲复东。
 
 > 汉王之败彭城，解而西也，彭越皆亡其所下城，独将其兵北居河上，常往来为汉游兵击楚，绝其后粮。是月，彭越渡睢，与项声、薛公战下邳，破，杀薛公。羽乃使终公守成皋，而自东击彭越。汉王引兵北，击破终公，复军成皋。
+
 > 六月，羽已破走彭越，闻汉复军成皋，乃引兵西拔荥阳城，生得周苛。羽谓苛：“为我将，以公为上将军，封三万户。”周苛骂曰：“若不趋降汉，今为虏矣；若非汉王敌也！”羽烹周苛，并杀枞公而虏韩王信，遂围成皋。汉王逃，独与滕公共车出成皋玉门，北渡河，宿小脩武传舍。晨，自称汉使，驰入赵壁。张耳、韩信未起，即其卧内，夺其印符以麾召诸将，易置之。信、耳起，乃知汉王来，大惊。汉王既夺两人军，即令张耳徇行，备守赵地。拜韩信为相国，收赵兵未发者击齐。诸将稍稍得出成皋从汉王。楚拔成皋，欲西；汉使兵距之巩，令其不得西。
+
 > 汉王得韩信军，复大振。八月，引兵临河，南乡，军小脩武，欲复与楚战。郎中郑忠说止汉王，使高垒深堑勿与战。汉王听其计，使将军刘贾、卢绾将卒二万人，骑数百，度白马津，入楚地，佐彭越，烧楚积聚，以破其业，无以给项王军食而已。楚兵击刘贾，贾辄坚壁不肯与战，而与彭越相保。
+
 > 汉王欲捐成皋以东，屯巩、洛以距楚。郦生曰：“臣闻‘知天之天者，王事可成’，王者以民为天，而民以食为天。夫敖仓，天下转输久矣，臣闻其下乃有藏粟甚多。楚人拔荥阳，不坚守敖仓，乃引而东，令適卒分守成皋，此乃天所以资汉也。方今楚易取而汉反却，自夺其便，臣窃以为过矣。且两雄不俱立，楚、汉久相持不决，海内摇荡，农夫释耒，红女下机，天下之心未有所定也。愿足下急复进兵，收取荥阳，据敖仓之粟，塞成皋之险，杜太行之道，距蜚狐之口，守白马之津，以示诸侯形制之势，则天下知所归矣。”王从之，乃复谋取敖仓。食其又说王曰：“方今燕、赵已定，唯齐未下，诸田宗强，负海、岱，阻河、济，南近于楚，人多变诈；足下虽遣数万师，未可以岁月破也。臣请得奉明诏说齐王，使为汉而称东籓。”上曰：“善！”乃使郦生说齐王曰：“王知天下之所归乎？”王曰：“不知也。天下何所归？”郦生曰：“归汉。”曰：“先生何以言之？”曰：“汉王先入咸阳，项王负约，王之汉中。项王迁杀义帝，汉王闻之，起蜀、汉之兵击三秦，出关而责义帝之处。收天下之兵，立诸侯之后；降城即以侯其将，得赂即以分其士；与天下同其利，豪英贤才皆乐为之用。项王有倍约之名，杀义帝之实；于人之功无所记，于人之罪无所忘；战胜而不得其赏，拔城而不得其封，非项氏莫得用事；天下畔之，贤才怨之，而莫为之用。故天下之事归于汉王，可坐而策也！夫汉王发蜀、汉，定三秦；涉西河，破北魏；出井陉，诛成安君；此非人之力也，天之福也！今已据敖仓之粟，塞成皋之险，守白马之津，杜太行之阪，距蜚狐之口；天下后服者先亡矣。王疾先下汉王，齐国可得而保也；不然，危亡可立而待也！”先是，齐闻韩信且东兵，使华无伤、田解将重兵屯历下以距汉。及纳郦生之言，遣使与汉平，乃罢历下守战备，与郦生日纵酒为乐。韩信引兵东，未度平原，闻郦食其已说下齐，欲止。辨士蒯彻说信曰：“将军受诏击齐，而汉独发间使下齐，宁有诏止将军乎？何以得毋行也？且郦生，一士，伏轼掉三寸之舌，下齐七十馀城，将军以数万众，岁馀乃下赵五十馀城。为将数岁，反不如一竖儒之功乎！”于是信然之，遂渡河。
 
 ### 太祖高皇帝四年戊戌（前203）
+
 <hr/>
+
 > 冬，十月，信袭破齐历下军，遂至临淄。齐王以郦生为卖己，乃烹之；引兵东走高密，使使之楚请救。田横走博阳，守相田光走城阳，将军田既军于胶东。
+
 > 楚大司马咎守成皋，汉数挑战，楚军不出。使人辱之，数日，咎怒，渡兵汜水。士卒半渡，汉击之，大破楚军，尽得楚国金玉、货赂，咎及司马欣皆自刭汜水上。汉王引兵渡河，复取成皋，军广武，就敖仓食。
 
 > 项羽下梁地十馀城，闻成皋破，乃引兵还。汉军方围钟离昩于荥阳东，羽亦军广武，与汉相守。数月，楚军食少。项王患之，乃为高祖，置太公其上，告汉王曰：“今不急下，吾烹太公！”汉王曰：“吾与羽俱北面受命怀王，约为兄弟，吾翁即若翁；必欲烹而翁，幸分我一杯羹！”项王怒，欲杀之。项伯曰：“天下事未可知。且为天下者不顾家，虽杀之，无益，只益祸耳！”项王从之。项王谓汉王曰：“愿与汉王挑战，决雌雄，毋徒苦天下之民父子为也！”汉王笑谢曰；“吾宁斗智，不能斗力！”项王三令壮士出挑战，汉有善骑射者楼烦辄射杀之。项王大怒，乃自被甲持戟挑战。汉王使人间问之，乃项王也，汉王大惊。汉王数羽十罪。羽大怒，伏弩射中汉王。汉王伤胸，乃扪足曰：“虏中吾指。”汉王病创卧。汉王出行军，疾甚，因驰入成皋。
@@ -76,89 +100,139 @@ date: 2022-12-27 15:43:01
 > 十一月，刘贾南渡淮，围寿春，遣人诱楚大司马周殷。殷畔楚，以舒屠六，举九江兵迎黥布，并行屠城父，随刘贾皆会。
 
 #### 项羽之死
+
 > 十二月，项王至垓下，兵少，食尽，与汉战不胜，入壁。项王夜闻汉军四面皆楚歌，乃大惊。于是项王乘其骏马名骓，溃围南出驰走。至阴陵，迷失道，问一田父，田父绐曰“左”。左，乃陷大泽中，以故汉追及之。项王自度不得脱。汉军不知项王所在，乃分军为三，复围之。项王乃驰，复斩汉一都尉，杀数十百人。项王欲东渡乌江，乌江亭长舣船待，谓项王曰：“江东虽小，地方千里，众数十万人，亦足王也。”项王笑曰：“天之亡我，我何渡为！且籍与江东子弟八千人渡江而西，今无一人还；纵江东父兄怜而王我，我何面目见之！纵彼不言，籍独不愧于心乎！”乃刎而死，楚地悉定，独鲁不下，乃持项王头以示鲁父兄，鲁乃降。汉王以鲁公礼葬项王于穀城。
+
 > 太史公曰：！自矜功伐，奋其私智而不师古，谓霸王之业，欲以力征经营天下，身死东城，尚不觉寤而不自责，乃引“天亡我，非用兵之罪也，”岂不谬哉！
+
 > 扬子《法言》：汉屈群策，群策屈群力；楚憞群策而自屈其力！”
-> 汉王还，至定陶，驰入齐王信壁，夺其军。
-> 春，正月，更立齐王信为楚王，王淮北，都下邳。封魏相国建城侯彭越为梁王，王魏故地，都定陶。
+
+> 汉王还，至定陶，驰入齐王信壁，夺其军。 春，正月，更立齐王信为楚王，王淮北，都下邳。封魏相国建城侯彭越为梁王，王魏故地，都定陶。
+
 > 二月甲午，王即皇帝位于汜水之阳。 帝置酒洛阳南宫，上曰：“吾所以有天下者何？项氏之所以失天下者何？”高起、王陵对曰：“陛下使人攻城略地，因以与之，与天下同其利；项羽不然，有功者害之，贤者疑之，此其所以失天下也。”上曰：“公知其一，未知其二。夫运筹帷幄之中，决胜千里之外，吾不如子房；填国家，抚百姓，给饷馈，不绝粮道，吾不如萧何；连百万之众，战必胜，攻必取，吾不如韩信。三者皆人杰，吾能用之，此吾所以取天下者也。项羽有一范增而不能用，此所以为我禽也。”群臣说服。
+
 > 韩信至楚，召漂母，赐千金。召辱己少年令出胯下者，以为中尉，告诸将相曰：“此壮士也。方辱我时，我宁不能杀之邪？杀之无名，故忍而就此。”
+
 > 彭越既受汉封，田横惧诛，与其徒属五百馀人入海，后田横自杀，以王者礼葬之。既葬，二客穿其冢傍孔，皆自刭，馀五百人尚在海中，使使召之，至，则闻田死，亦皆自杀。
-> 齐人娄敬戍陇西，过洛阳，上召见，问之。娄敬曰：“陛下都洛阳，岂欲与周室比隆哉？”上曰：“然。”娄敬曰：“陛下取天下与周异。有德则易以王，无德则易以亡。故周之盛时，天下和洽，诸侯、四夷莫不宾服，效其贡职。及其衰也，天下莫朝，周不能制也；非唯其德薄也，形势弱也。且夫秦地被山带河，四塞以为固，卒然有急，百万之众可立具也。因秦之故，资甚美膏腴之地，此所谓天府者也。陛下入关而都之，山东虽乱，秦之故地可全而有也。今陛下案秦之故地，此亦扼天下之亢而拊其背也。”帝问群臣，群臣皆山东人，争言：“周王数百年，秦二世即亡。洛阳东有成皋，西有殽、渑，倍河，乡伊、洛，其固亦足恃也。”上问张良。良曰：“洛阳虽有此固，其中小不过数百里，田地薄，四面受敌，此非用武之国也。关中左殽、函，右陇、蜀，沃野千里。南有巴、蜀之饶，北有胡苑之利。阻三面而守，独以一面东制诸侯；诸侯安定，河、渭漕輓天下，西给京师；诸侯有变，顺流而下，足以委输。此所谓金城千里，天府之国也。娄敬说是也。”上即日车驾西，都长安。
+
+#### 定都关中
+
+> 齐人娄敬戍陇西，过洛阳，上召见。娄敬曰：“陛下都洛阳，岂欲与周室比隆哉？陛下取天下与周异。有德则易以王，无德则易以亡。故周之盛时，天下和洽，诸侯、四夷莫不宾服，效其贡职。及其衰也，天下莫朝，周不能制也；非唯其德薄也，形势弱也。且夫秦地被山带河，四塞以为固，卒然有急，百万之众可立具也。因秦之故，资甚美膏腴之地，此所谓天府者也。陛下入关而都之，山东虽乱，秦之故地可全而有也。今陛下案秦之故地，此亦扼天下之亢而拊其背也。”帝问群臣，群臣皆山东人，争言：“周王数百年，秦二世即亡。洛阳东有成皋，西有殽、渑，倍河，乡伊、洛，其固亦足恃也。”上问张良。良曰：“洛阳虽有此固，其中小不过数百里，田地薄，四面受敌，此非用武之国也。关中左殽、函，右陇、蜀，沃野千里。南有巴、蜀之饶，北有胡苑之利。阻三面而守，独以一面东制诸侯；诸侯安定，河、渭漕輓天下，西给京师；诸侯有变，顺流而下，足以委输。此所谓金城千里，天府之国也。娄敬说是也。”上即日车驾西，都长安。
 
 > 张良素多病，从上入关，即道引，不食穀，杜门不出，愿弃人间事，欲从赤松子游耳。”司马光曰：所谓明哲保身者，子房有焉。
 
 > 秋，七月，燕王臧荼反；上自将征之。九月，虏藏荼。壬子，立太尉长安侯卢绾为燕王。绾家与上同里闬，绾生又与上同日；上宠幸绾，群臣莫敢望，故特王之。
 
-
 > 项王将钟离昧，素与楚王信善。项王死后，亡归信。汉王怨昧，闻其在楚，诏楚捕昧。信初之国，行县邑，陈兵出入。
 
 ### 太祖高皇帝六年庚子（前201）
+
 <hr/>
+
 > 冬，十月，人有上书告楚王信反者。帝以问诸将，平曰：“古者天子有巡狩，会诸侯。陛下第出，伪游云梦，会诸侯于陈。谒而陛下因禽之，此特一力士之事耳。”十二月，上会诸侯于陈，信持昧首谒上；上令武士缚信，载后车。信曰：“果若人言：‘狡兔死，走狗烹；飞鸟尽，良弓藏；敌国破，谋臣亡。’”。
+
 > 田肯贺上曰：“非亲子弟，莫可使王齐者。”上曰：“善！”赐金五百斤。
+
 > 上还，至洛阳，赦韩信，封为淮阴侯。信知汉王畏恶其能，多称病，不朝从；居常鞅鞅，羞与绛、灌等列。尝过樊将军哙，哙跪拜送迎，言称臣，曰：“大王乃肯临臣！”信出门，笑曰：“生乃与哙等为伍！”上尝从容与信言诸将能将兵多少。上问曰：“如我能将几何？”信曰：“陛下不过能将十万。”上曰：“于君何如？”曰：“臣多多而益善耳。”上笑曰：“多多益善，何为为我禽？”信曰：“陛下不能将兵而善将将，此乃信之所以为陛下禽也。且陛下，所谓天授，非人力也。”
+
 > 上已封大功臣二十馀人，其馀日夜争功不决，未得行封。上在洛阳南宫，从复道望见诸将，往往相与坐沙中语。上曰：“此何语？”留侯曰：“陛下不知乎？此谋反耳！”上曰：“天下属安定，何故反乎？”留侯曰：“陛下起布衣，以此属取天下。今陛下为天子，而所封皆故人所亲爱，所诛皆平生所仇怨。今军吏计功，以天下不足遍封；此属畏陛下不能尽封，恐又见疑平生过失及诛，故即相聚谋反耳。”上乃忧曰：“为之奈何？”留侯曰：“上平生所憎、群臣所共知，谁最甚者？”上曰：“雍齿与我有故怨，数尝窘辱我；我欲杀之，为其功多，故不忍。”留侯曰：“今急先封雍齿，则群臣人人自坚矣。”于是上乃置酒，封雍齿为什方侯；而急趋丞相、御史定功行封。群臣罢酒，皆喜，曰：“雍齿尚为侯，我属无患矣！”
+
 > 夏，五月，丙午，尊太公为太上皇。
 
-> 初，匈奴畏秦，北徙十馀年。及秦灭，匈奴复稍南渡河。单于头曼有太子曰冒顿。后有所爱阏氏，生少子，头曼欲立之。是时，东胡强而月氏盛，乃使冒顿质于月氏。既而头曼急击月氏，月氏欲杀冒顿。冒顿盗其善马骑之，亡归；头曼以为壮，令将万骑。冒顿乃作鸣镝，习勒其骑射。令曰：“鸣镝所射而不悉射者，斩之！”冒顿乃以鸣镝自射其善马，既又射其爱妻；左右或不敢射者，皆斩之。最后以鸣镝射单于善马，左右皆射之。于是冒顿知其可用。从头曼猎，以鸣镝射头曼，其左右亦皆随鸣镝而射。遂杀头曼，尽诛其后母与弟及大臣不听从者。冒顿自立为单于。东胡闻冒顿立，乃使使谓冒顿：“欲得头曼时千里马。”冒顿问群臣，群臣皆曰：“此匈奴宝马也，勿与！”冒顿日；“奈何与人邻国而爱一马乎！”遂与之。居顷之，东胡又使使谓冒顿：“欲得单于一阏氏。”冒顿复问左右，左右皆怒曰：“东胡无道，乃求阏氏！请击之！”冒顿曰：“奈何与人邻国爱一女子乎！”遂取所爱阏氏予东胡。东胡王愈益骄。东胡与匈奴中间有弃地莫居，千馀里，各居其边，为瓯脱。东胡使使谓冒顿：“此弃地，欲有之。”冒顿问群臣，群臣或曰：“此弃地，予之亦乎，勿与亦可！”于是冒顿大怒曰：“地者，国之本也，奈何予之！”诸言予之者，皆斩之。冒顿上马，令：“国中有后出者斩！”遂袭击东胡。东胡初轻冒顿，不为备；冒顿遂灭东胡。既归，又西击走月氏，南并楼烦、白羊河南王，遂侵燕、代，悉收蒙恬所夺匈奴故地与汉关故河南塞至朝那、肤施。是时，汉兵方与项羽相距，中国罢于兵革，以故冒顿得自强，控弦之士三十馀万，威服诸国。秋，匈奴围韩王信于马邑。信数使使胡，求和解。汉发兵救之。疑信数间使，有二心，使人责让信。信恐诛，九月，以马邑降匈奴。匈奴冒顿因引兵南逾句注，攻太原，至晋阳。
+#### 匈奴崛起
 
-> 帝悉去秦苛仪法，为简易。群臣饮酒争功，醉，或妄呼，拔剑击柱，帝益厌之。叔孙通说上曰：“夫儒者难与进取，可与守成。臣愿征鲁诸生，与臣弟子共起朝仪。”帝曰：“得无难乎？”叔孙通曰：“五帝异乐，三王不同礼，礼者，因时世、人情为之节文者也。臣愿颇采古礼，与秦仪杂就之。”上曰：“可试为之，令易知，度吾所能行者为之。”于是叔孙通使征鲁诸生三十馀人。鲁有两生不肯行，曰：“公所事者且十主，皆面谀以得亲贵。今天下初定，死者未葬，伤者未起，又欲起礼、乐。礼、乐所由起，积德百年而后可兴也。吾不忍为公所为。公去矣，无污我！”叔孙通笑曰：“若真鄙儒也，不知时变。”遂与所微三十人西，及上左右为学者与其弟子百馀人，为绵蕞，野外习之。月馀，言于上曰：“可试观矣。”上使行礼，曰：“吾能为此。”乃令群臣习肄。
+> 初，匈奴畏秦，北徙十馀年。及秦灭，匈奴复稍南渡河。头曼单于子冒顿作鸣镝，习勒其骑射，以鸣镝射头曼，其左右亦皆随鸣镝而射。遂杀头曼，尽诛其后母与弟及大臣不听从者。冒顿屈于东胡王，东胡王愈益骄。东胡与匈奴中间有弃地莫居，千馀里。东胡使使谓冒顿：“此弃地，欲有之。”冒顿大怒曰：“地者，国之本也，奈何予之！”遂袭击东胡，灭之。又西击走月氏，南并楼烦、白羊河南王，遂侵燕、代，悉收蒙恬所夺匈奴故地与汉关故河南塞至朝那、肤施。是时，汉兵方与项羽相距，中国罢于兵革，以故冒顿得自强，威服诸国。秋，匈奴围韩王信于马邑。信数使使胡，求和解。汉发兵救之。疑信数间使，有二心，使人责让信。信恐诛，九月，以马邑降匈奴。匈奴冒顿因引兵南逾句注，攻太原，至晋阳。
+
+#### 叔孙通制汉礼
+
+> 帝悉去秦苛仪法，为简易。群臣饮酒争功，拔剑击柱，帝益厌之。叔孙通说上曰：“夫儒者难与进取，可与守成。臣愿征鲁诸生，与臣弟子共起朝仪。”于是叔孙通使征鲁诸生三十馀人。鲁有两生不肯行，曰：“公所事者且十主，皆面谀以得亲贵。今天下初定，死者未葬，伤者未起，又欲起礼、乐。礼、乐所由起，积德百年而后可兴也。吾不忍为公所为。叔孙通笑曰：“若真鄙儒也，不知时变。”遂与所微三十人西，及上左右为学者与其弟子百馀人，为绵蕞，野外习之。月馀，言于上曰：“可试观矣。”上使行礼，曰：“吾能为此。”乃令群臣习肄。
 
 ### 太祖高皇帝七年辛丑（前200）
-<hr/>
-> 冬，十月，长乐宫成。叔孙通制礼，颇有所增损，大抵皆袭秦故，自天子称号下至佐僚及宫室、官名，少所变改。其书，后与律、令同录，藏于理官。法家又复不传，民臣莫有言者焉。
 
-> 臣光曰：礼之为物大矣！用之于身，则动静有法而百行备焉；用之于家，则内外有别而九族睦焉；用之于乡，则长幼有伦而俗化美焉；用之于国，则君臣有叙而政治成焉；用之于天下，则诸侯顺服而纪纲正焉；岂直几席之上、户庭之间得之而不乱哉！夫以高祖之明达，闻陆贾之言而称善，睹叔孙通之仪而叹息；然所以不能比肩于三代之王者，病于不学而已。当是之时，得大儒而佐之，与之以礼为天下，其功烈岂若是而止哉！惜夫，叔孙生之为器小也！徒窃礼之糠粃，以依世、谐俗、取宠而已，遂使先王之礼沦没而不振，以迄于今，岂不痛甚矣哉！是以扬子讥之曰：“昔者鲁有大臣，史失其名，曰：‘何如其大也！’曰：‘叔孙通欲制君臣之仪，召先生于鲁，所不能致者二人。’曰：‘若是，则仲尼之开迹诸侯也非邪？”曰：‘仲尼开迹，将以自用也。如委己而从人，虽有规矩、准绳，焉得而用之！’”善乎扬子之言也！夫大儒者，恶肯毁其规矩、准绳以趋一时之功哉！
+<hr/>
+
+> 冬，十月，长乐宫成。叔孙通制礼，颇有所增损，大抵皆袭秦故，自天子称号下至佐僚及宫室、官名，少所变改。其书，后与律、令同录，藏于理官。法家又复不传，民臣莫有言者焉。司马光曰：夫大儒者，恶肯毁其规矩、准绳以趋一时之功哉！
 
 > 上自将击韩王信，破其军于铜鞮，信亡走匈奴；白土人曼丘臣、王黄等立赵苗裔赵利为王，复收信败散兵，与信及匈奴谋攻汉。匈奴使左、右贤王将万馀骑，与王黄等屯广武以南，至晋阳，汉兵击之，匈奴辄败走，已复屯聚，汉兵乘胜追之。会天大寒，雨雪，士卒堕指者什二三。
+
 #### 白登之围
+
 > 上居晋阳，闻冒顿居代谷，欲击之。使人觇匈奴，冒顿匿其壮士、肥牛马，但见老弱及羸畜。使刘敬往使匈奴，。刘敬还，报曰：“徒见羸瘠、老弱，此必欲见短，伏奇兵以争利。愚以为匈奴不可击也。”上怒，骂刘敬曰：“齐虏以口舌得官，今乃妄言沮吾军！”械系敬广武。帝先至平城，兵未尽到；冒顿纵精兵四十万骑，围帝于白登七日，汉兵中外不得相救饷。帝用陈平秘计，使使间厚遗阏氏。阏氏谓冒顿曰：“两主不相困。今得汉地，而单于终非能居之也。且汉主亦有神灵，单于察之！”冒顿乃解围之一角。会天大雾，从解角直出。上至广武，赦刘敬，曰：“吾不用公言，以困平城；”乃封敬二千户为关内侯，号为建信侯。乃更封陈平为曲逆侯，尽食之。
+
 > 十二月，上还，过赵。赵王敖执子婿礼甚卑，上箕倨慢骂之。赵相贯高、赵午等皆怒，曰：“吾王，孱王也！”乃说王曰：“天下豪桀并起，能者先立。今王事帝甚恭，而帝无礼；请为王杀之！”张敖啮其指出血，曰：“君何言之误！先人亡国，赖帝得复，德流子孙；秋豪皆帝力也。愿君无复出口！”贯高、赵午等皆相谓曰：“乃吾等非也。吾王长者，不倍德；且吾等义不辱。今帝辱我王，故欲杀之，何洿王为！事成归王，事败独身坐耳！”
+
 > 匈奴攻代。代王喜弃国自归，赦为郃阳侯。辛卯，立皇子如意为代王。
+
 > 春，二月，上至长安。萧何治未央宫，上见其壮丽，甚怒，谓何曰：“天下匈匈，苦战数岁，成败未可知，是何治宫室过度也！”何曰：“天下方未定，故可因以就宫室。且夫天子以四海为家，非壮丽无以重威，且无令后世有以加也。”上说。
+
 > 上自栎阳徙都长安。
+
 ### 太祖高皇帝八年壬寅（前199）
+
 <hr/>
+
 > 匈奴冒顿数苦北边。上患之，问刘敬，刘敬曰：“陛下诚能以適长公主妻之，厚奉遗之，彼必慕，以为阏氏，生子，必为太子。陛下以岁时汉所馀，彼所鲜，数问遗，因使辨士风谕以礼节。冒顿在，固为子婿；死，则外孙为单于；岂尝闻外孙敢与大父抗礼者哉！”帝曰：“善！”欲遣长公主。吕后日夜泣曰，上竟不能遣。
+
 ### 太祖高皇帝九年癸卯（前198）
+
 <hr/>
 
 > 冬，上取家人子名为长公主，以妻单于；使刘敬往结和亲约。
+
 > 刘敬从匈奴来，因言：“秦中新破，少民，地肥饶，可益实。今陛下虽都关中，实少民，东有六国之强族，一日有变，陛下亦未得高枕而卧也。臣愿陛下徙六国后及豪桀、名家居关中，无事可以备胡，诸侯有变，亦足率以东伐。此强本弱末之术也。”上曰：“善！”十一月，徙齐、楚大族及豪桀于关中，与利田、宅，凡十馀万口。
+
 > 春，正月，废赵王敖宣平侯，徒代王如意为赵王。
 
 ### 太祖高皇帝十年甲辰（前197）
-<hr/>
-> 定陶戚姬有宠于上，生赵王如意。上以太子仁弱，谓如意类己；虽封为赵王，常留之长安。上之关东，戚姬常从，日夜啼泣，欲立其子。吕后年长，常留守，益疏。上欲废太子而立赵王，大臣争之，皆莫能得。御史大夫周昌廷争之强，上问其说。昌为人吃，又盛怒，曰：“臣口不能言，然臣期期知其不可！陛下欲废太子，臣期期不奉诏！”上欣然而笑。吕后侧耳于东厢听，既罢，见昌，为跪谢，曰：“微君，太子几废！”时赵王年十岁，上忧万岁之后不全也；符玺御史赵尧请为赵王置贵强相，及吕后、太子、群臣素所敬惮者。上曰：“谁可者？”尧曰：“御史大夫昌，其人也。”上乃以昌相赵，而以尧代昌为御史大夫。
 
-> 初，上以阳夏侯陈豨为相国，监赵、代边兵；豨过辞淮阴侯。淮阴侯挈其手，辟左右，与之步于庭，仰天叹曰：“子可与言乎？”豨曰：“唯将军令之！”淮阴侯曰：“公之所居，天下精兵处也；而公，陛下之信幸臣也。人言公之畔，陛下必不信；再至，陛下乃疑矣；三至，必怒而自将。吾为公从中起，天下可图也。”陈豨素知其能也，信之，曰：“谨奉教！”豨常慕魏无忌之养士，及为相守边，告归，过赵，宾客随之者千馀乘，邯郸官舍皆满。赵相周昌求入见上，具言豨宾客甚盛，擅兵于外数岁，恐有变。上令人覆案豨客居代者诸不法事，多连引豨。豨恐，韩王信因使王黄、曼丘臣等说诱之。太上皇崩，上使人召豨，豨称病不至；九月，遂与王黄等反，自立为代王，劫略赵、代。上自东击之。至邯郸，喜曰：“豨不南据邯郸而阻漳水，吾知其无能为矣。”
-> 周昌奏：“常山二十五城，亡其二十城；请诛守、尉。”上曰：“守、尉反乎？”对曰：“不。”上曰：“是力不足，亡罪。”上令周昌选赵壮士可令将者，白见四人。上嫚骂曰：“竖子能为将乎？”四人惭，皆伏地；上封各千户，以为将。左右谏曰；“从入蜀、汉，伐楚，赏未遍行；今封此，何功？”上曰：“非汝所知。陈豨反，赵、代地皆豨有。吾以羽檄征天下兵，未有至者，今计唯独邯郸中兵耳。吾何爱四千户，不以慰赵子弟！”皆曰：“善！”又闻豨将皆故贾人，上曰：“吾知所以与之矣。”乃多以金购豨将，豨将多降。
-### 太祖高皇帝十一年乙巳（前196）
 <hr/>
+
+> 定陶戚姬有宠于上，生赵王如意。上以太子仁弱，谓如意类己；虽封为赵王，常留之长安。戚姬常从，日夜啼泣，欲立其子。吕后年长，常留守，益疏。上欲废太子而立赵王，大臣争之，皆莫能得。时赵王年十岁，上忧万岁之后不全也，因周昌上书谏止废太子，上乃以昌相赵。
+
+> 初，上以阳夏侯陈豨为相国，监赵、代边兵。九月，遂与王黄等反，自立为代王，劫略赵、代。上自东击之。乃多以金购豨将，豨将多降。
+
+### 太祖高皇帝十一年乙巳（前196）
+
+<hr/>
+
 > 冬，上在邯郸。陈豨将侯敞将万馀人游行，王黄将骑千馀军曲逆，张春将卒万馀人渡河攻聊城。汉将军郭蒙与齐将击，大破之。太尉周勃道太原入定代地，至马邑，不下，攻残之。赵利守东垣，帝攻拔之，更命曰真定。于是陈豨军遂败。
+
 #### 韩信之死
-> 淮阴侯信称病，不从击豨，阴使人至豨所，与通谋。信谋与家臣夜诈诏赦诸官徒、奴，欲发以袭吕后、太子；部署已定，待豨报。其舍人得罪于信，信囚，欲杀之。春，正月，舍人弟上变，告信欲反状于吕后。吕后欲召，恐其傥不就，乃与萧相国谋，诈令人从上所来，言豨已得，死，列侯、群臣皆贺。相国绐信曰：“虽疾，强入贺。”信入，吕后使武士缚信，斩之长乐钟室。信方斩，曰：“吾悔不用蒯彻之计，乃为儿女子所诈，岂非天哉！”遂夷信三族。
-> 上还洛阳，闻淮阴侯之死，且喜且怜之，问吕后曰：“信死亦何言？”吕后曰：“信言恨不用蒯彻计。”上曰：“是齐辩士蒯彻也。”乃诏齐捕蒯彻。蒯彻至，上曰：“若教淮阴侯反乎？”对曰：“然，臣固教之。竖子不用臣之策，故令自夷于此；如用臣之计，陛下安得而夷之乎！”上怒曰；“烹之！”彻曰：“嗟乎！冤哉烹也！”上曰：“君教韩信反，何冤？”对曰：“秦失其鹿，天下共逐之，高材疾足者先得焉。跖之狗吠尧，尧非不仁，狗固吠非其主。当是时，臣唯独知韩信，非知陛下也。且天下锐精持锋欲为陛下所为者甚众，顾力不能耳，又可尽烹之邪？”上曰：“置之。”
+
+> 淮阴侯信称病，阴使人至豨所，与通谋。其舍人得罪于信，信欲杀之。春，正月，舍人弟上变，告信欲反状于吕后。吕后乃与萧相国谋，诈令人从上所来，言豨已得，死，列侯、群臣皆贺。相国绐信曰：“虽疾，强入贺。”信入，吕后使武士缚信，斩之长乐钟室。信方斩，曰：“吾悔不用蒯彻之计，乃为儿女子所诈！”遂夷信三族。上闻淮阴侯之死，问吕后曰：“信死亦何言？”吕后言之。乃诏齐捕蒯彻，至，上曰：“若教淮阴侯反乎？”对曰：“然，臣固教之。竖子不用臣之策，故令自夷于此；如用臣之计，陛下安得而夷之乎！”上怒曰；“烹之！”彻曰：“嗟乎！冤哉烹也！”上曰：“君教韩信反，何冤？”对曰：“秦失其鹿，天下共逐之，高材疾足者先得焉。跖之狗吠尧，尧非不仁，狗固吠非其主。当是时，臣唯独知韩信，非知陛下也。且天下锐精持锋欲为陛下所为者甚众，顾力不能耳，又可尽烹之邪？”上曰：“置之。”
+
 > 立子恒为代王，都晋阳。
-> 上之击陈豨也，征兵于梁；梁王称病，使将将兵诣邯郸。上怒，使人让之。梁王恐，欲自往谢。其将扈辄曰：“王始不往，见让而往，往则为禽矣。不如遂发兵反。”梁王不听。梁太仆得罪，亡走汉，告梁王与扈辄谋反。于是上使使掩梁王，梁王不觉，遂囚之洛阳。有司治“反形已具，请论如法”，上赦以为庶人，传处蜀青衣。西至郑，逢吕后从长安来。彭王为吕后泣涕，自言无罪，愿处故昌邑。吕后许诺，与俱东。至洛阳，吕后白上曰：“彭王壮士，今徙之蜀，此自遗患；不如遂诛之。妾谨与俱来。”于是吕后乃令其舍人告彭越复谋反。廷尉王恬关奏请族之，上可其奏。三月，夷越三族。枭越首洛阳，下诏：“有收视者，辄捕之。”梁大夫栾布使于齐，还，奏事越头下，祠而哭之。吏捕以闻。上召布，骂，欲烹之。方提趋汤，布顾曰：“愿一言而死。”上曰：“何言？”布曰：“方上之困于彭城，败荥阳、成皋间，项王所以遂不能西者，徒以彭王居梁地，与汉合从苦楚也。当是之时，王一顾，与楚则汉破，与汉则楚破。且垓下之会，微彭王，项氏不亡。天下已定，彭王剖符受封，亦欲传之万世。今陛下一征兵于梁，彭王病不行。而陛下疑以为反；反形未具，以苛小案诛灭之。臣恐功臣人人自危也。今彭王已死，臣生不如死，请就烹。”于是上乃释布罪，拜为都尉。
+
+> 上之击陈豨也，征兵于梁；梁王称病。于是上使使掩梁王囚之洛阳，上赦以为庶人。
+
+> 于是吕后乃令其舍人告彭越复谋反。三月，夷越三族。枭越首洛阳，下诏：“有收视者，辄捕之。”梁大夫栾布哭彭越尸：“今陛下一征兵于梁，彭王病不行。而陛下疑以为反；反形未具，以苛小案诛灭之。臣恐功臣人人自危也。”于是上乃释布罪，拜为都尉。
 
 > 五月，陆贾说服赵佗臣服汉朝,诏立秦南海尉佗为南粤王。陆生时时前说称诗、书，帝骂曰：“乃公居马上而得之，安事诗、书！”贾曰：“乡使秦行仁义，法先圣，陛下安得而有之！”帝有惭色，贾乃粗述存亡之征，凡著十二篇，帝未尝不称善，号其书曰《新语》。
 
 > 秋，七月，淮南王布反。是时，上有疾，欲使太子往击黥布。太子客东园公、绮里季、夏黄公、角里先生说建成侯吕释之曰：“太子将兵，有功则位不益，无功则从此受祸矣！’”于是吕释之立夜见吕后。吕后承间为上泣涕而言。上曰：“吾惟竖子固不足遣，而公自行耳。”于是上自将兵而东。布之初反，谓其将曰：“上老矣，厌兵，必不能来。”故遂反。
 
 ### 太祖高皇帝十二年丙午（前195）
+
 <hr/>
+
 > 冬，十月，上与布兵遇于蕲西，遂大战。布军败走，渡淮，数止战，不利，与百馀人走江南，上令别将追之。 汉别将击英布军洮水南、北，皆大破之。布故与番君婚，以故长沙成王臣使人诱布，伪欲与亡走越，布信而随之。番阳人杀布兹乡民田舍。
 
 > 十一月，上过鲁，以太牢祠孔子。
+
 > 上从破黥布归，疾益甚，愈欲易太子。叔孙通谏曰：“昔者晋献公以骊姬之故，废太子，立奚齐，晋国乱者数十年，为天下笑。秦以不蚤定扶苏，令赵高得以诈立胡亥，自使灭祀，此陛下所亲见。今太子仁孝，天下皆闻之。太子，天下本，本一摇，天下振动；奈何以天下为戏乎！”时大臣固争者多；上知群臣心皆不附赵王，乃止不立。
 
-> 相国何以长安地狭，上林中多空地，弃；愿令民得入田，毋收稾，为禽兽食。上大怒曰：“相国多受贾人财物，乃为请吾苑！”下相国廷尉，械系之。数日，王卫尉侍，前问曰：“相国何大罪，陛下系之暴也？”上曰：“吾闻李斯相秦皇帝，有善归主，有恶自与。今相国多受贾竖金，而为之请吾苑以媚于民，故系治之。”王卫尉曰：“夫职事苟有便于民而请之，真宰相事；陛下奈何乃疑相国受贾人钱乎？且陛下距楚数岁，陈豨、黥布反，陛下自将而往；当是时，相国守关中，关中摇足，则关以西非陛下有也！相国不以此时为利，今乃利贾人之金乎？且秦以不闻其过亡天下；李斯之分过，又何足法哉！陛下何疑宰相之浅也！”帝不怿。是日，使使持节赦出相国。相国年老，素恭谨，入，徒跣谢。帝曰：“相国休矣！相国为民请苑，吾不许，我不过为桀、纣王，而相国为贤相。吾故系相国，欲令百姓闻吾过也。”
+> 相国何以长安地狭，上林中多空地，愿令民得入田，毋收稾，为禽兽食。上大怒，下相国廷尉，械系之。王卫尉说上曰：“夫职事苟有便于民而请之，真宰相事；陛下奈何乃疑相国受贾人钱乎？”帝不怿。是日，使使持节赦出相国。
 
-> 陈豨之反也，燕王绾发兵击其东北。当是时，陈豨使王黄求救匈奴；燕王绾亦使其臣张胜于匈奴，言豨等军破。张胜至胡，故燕王藏荼子衍出亡在胡，见张胜曰：“公所以重于燕者，以习胡事也；燕所以久存者，以诸侯数反，兵连不决也。今公为燕，欲急灭豨等；豨等已尽，次亦至燕，公等亦且为虏矣。公何不令燕且缓陈豨，而与胡和！事宽，得长王燕；即有汉急，可以安国。”张胜以为然，乃私令匈奴助豨等击燕。燕王绾疑张胜与胡反，上书请族张胜。胜还，具道所以为者；燕王乃诈论他人，脱胜家属，使得为匈奴间。而阴使范齐之陈豨所，欲令久亡，连兵勿决。汉击黥布，豨常将兵居代；汉击斩豨，其裨将降，言燕王绾使范齐通计谋于豨所。帝使使召卢绾，绾称病；上又使辟阳侯审食其、御史大夫赵尧往迎燕王，因验问左右。绾愈恐，闭匿，谓其幸臣曰：“非刘氏而王，独我与长沙耳。往年春，汉族淮阴，夏，诛彭越，皆吕氏计。令上病，属任吕后；吕后妇人，专欲以事诛异姓王者及大功臣。”乃遂称病不行，其左右皆亡匿。语颇泄，辟阳侯闻之，归，具报上，上益怒。又得匈奴降者，言张胜亡在匈奴为燕使。于是上曰：“卢绾果反矣！”春，二月，使樊哙以相国将兵击绾，立皇子建为燕王。
+> 陈豨之反也，燕王绾发兵击其东北。当是时，汉击斩豨，其裨将降，言燕王绾使范齐通计谋于豨所。帝使使召卢绾，绾称病。春，二月，使樊哙以相国将兵击绾，绾走匈奴。立皇子建为燕王。
+
 > 上击布时，为流矢所中，行道，疾甚，吕后问曰：“陛下百岁后，萧相国既死，谁令代之？”上曰：“曹参可。”问其次，曰：“王陵可，然少戆，陈平可以助之。陈平知有馀，然难独任。周勃重厚少文，然安刘氏者必勃也，可令为太尉。”吕后复问其次，上曰：“此后亦非乃所知也。”夏，四月，甲辰，帝崩于长乐宫。丁未，发丧，大赦天下。 五月，丙寅，葬高帝于长陵。
 
 > 己巳，太子即皇帝位，尊皇后曰皇太后。
+
 > 初，高帝病甚，人有恶樊哙，帝大怒，用陈平谋，召绛侯周勃受诏床下，曰：“陈平亟驰传载勃代哙将；平至军中，即斩哙头！”二人既受诏，驰传，未至军，为坛，以节召樊哙。哙受诏，即反接，载槛车传诣长安。未至，帝崩，樊哙至，则赦，复爵邑。
+
 > 太后令永巷囚戚夫人，使人召赵王。帝知太后怒，自迎赵王霸上，与入宫，自挟与起居饮食。太后欲杀之，不得间。
+
+#### 评曰：
+
+> 高祖颇能用人，所以得成帝业，但晚年屠杀功臣太甚。这些异姓王才不如高祖，恐怕未必均有反心！
